fix link format
修复了一些其他的链接问题

--- a/Anonymity/01 - 家族答集/基本造型能力.md
+++ b/Anonymity/01 - 家族答集/基本造型能力.md
@@ -9,7 +9,7 @@
 
 shapr3d
 
-[The World's Most Intuitive 3D Design App | Shapr3D​www.shapr3d.com/![](https://pic4.zhimg.com/v2-2a760e33c367ac834584e2864e39266b_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.shapr3d.com/)
+[The World's Most Intuitive 3D Design App | Shapr3D​](https://link.zhihu.com/?target=https%3A//www.shapr3d.com/)
 
 不管你是不是干这类工作的，推荐各位学一下，作为一种个人基本技能。
 
