--- a/Anonymity/02 - 企管答集/火烧红莲寺.md
+++ b/Anonymity/02 - 企管答集/火烧红莲寺.md
@@ -21,7 +21,7 @@
 
 这就要研究个人信息保护法的细节了：
 
-[中华人民共和国个人信息保护法_中国人大网​www.npc.gov.cn/npc/c30834/202108/a8c4e3672c74491a80b53a172bb753fe.shtml](https://link.zhihu.com/?target=http%3A//www.npc.gov.cn/npc/c30834/202108/a8c4e3672c74491a80b53a172bb753fe.shtml)
+[中华人民共和国个人信息保护法_中国人大网​](https://link.zhihu.com/?target=http%3A//www.npc.gov.cn/npc/c30834/202108/a8c4e3672c74491a80b53a172bb753fe.shtml)
 
 个人信息的关键词——
 
