--- a/Anonymity/03 - 第一性/立场分歧.md
+++ b/Anonymity/03 - 第一性/立场分歧.md
@@ -97,4 +97,4 @@
 
 看一看这个东西：
 
-[如何看待美国阿拉巴马州通过法案，禁止几乎所有堕胎情形，包括强奸和乱伦怀孕也不允许堕胎？www.zhihu.com](https://www.zhihu.com/question/324473155/answer/685753199)
+[如何看待美国阿拉巴马州通过法案，禁止几乎所有堕胎情形，包括强奸和乱伦怀孕也不允许堕胎？](https://www.zhihu.com/question/324473155/answer/685753199)
