--- a/Anonymity/03 - 第一性/谁危险.md
+++ b/Anonymity/03 - 第一性/谁危险.md
@@ -9,7 +9,7 @@
 
 据估计，在2015年大概有30.3万名妇女在妊娠和分娩期间及分娩后死亡。 ——WHO
 
-[孕产妇死亡率​www.who.int/zh/news-room/fact-sheets/detail/maternal-mortality](https://link.zhihu.com/?target=https%3A//www.who.int/zh/news-room/fact-sheets/detail/maternal-mortality)
+[孕产妇死亡率](https://link.zhihu.com/?target=https%3A//www.who.int/zh/news-room/fact-sheets/detail/maternal-mortality)
 
 **即使按照最乐观的估计，中世纪女性单次分娩死亡率也大于1%（这估计乐观到极点，因为1900年的中国也不止这个水平。直到21世纪，在有国际援助的非洲国家仍然每十万活产孕妇死亡超过1000人。）**
 
@@ -53,9 +53,9 @@
 
 女性因为孕产死亡的概率，贴两篇论文，要是看得懂，自己看看：
 
-[https://www.researchgate.net/profile/Elisabeth-Iregren/publication/19840550_Maternal_deaths_in_medieval_Sweden_an_osteological_and_life_table_analysis/links/56ca247308ae5488f0d94255/Maternal-deaths-in-medieval-Sweden-an-osteological-and-life-table-analysis.pdf?origin=publication_detail​www.researchgate.net/profile/Elisabeth-Iregren/publication/19840550_Maternal_deaths_in_medieval_Sweden_an_osteological_and_life_table_analysis/links/56ca247308ae5488f0d94255/Maternal-deaths-in-medieval-Sweden-an-osteological-and-life-table-analysis.pdf?origin=publication_detail](https://link.zhihu.com/?target=https%3A//www.researchgate.net/profile/Elisabeth-Iregren/publication/19840550_Maternal_deaths_in_medieval_Sweden_an_osteological_and_life_table_analysis/links/56ca247308ae5488f0d94255/Maternal-deaths-in-medieval-Sweden-an-osteological-and-life-table-analysis.pdf%3Forigin%3Dpublication_detail)
+[Maternal deaths in medieval Sweden: an osteological and life table analysis](https://link.zhihu.com/?target=https%3A//www.researchgate.net/profile/Elisabeth-Iregren/publication/19840550_Maternal_deaths_in_medieval_Sweden_an_osteological_and_life_table_analysis/links/56ca247308ae5488f0d94255/Maternal-deaths-in-medieval-Sweden-an-osteological-and-life-table-analysis.pdf%3Forigin%3Dpublication_detail)
 
-[British maternal mortality in the 19th and early 20th centuries​www.ncbi.nlm.nih.gov/pmc/articles/PMC1633559/#!po=10.9756![](https://pic4.zhimg.com/v2-43b356d621f1d7b9dc4885d165ec3b9b_ipico.jpg)](https://link.zhihu.com/?target=https%3A//www.ncbi.nlm.nih.gov/pmc/articles/PMC1633559/%23%21po%3D10.9756)
+[British maternal mortality in the 19th and early 20th centuries​](https://link.zhihu.com/?target=https%3A//www.ncbi.nlm.nih.gov/pmc/articles/PMC1633559/%23%21po%3D10.9756)
 
 说这么多是为什么？
 
