--- a/Anonymity/04 - 社科答集/中国的规模.md
+++ b/Anonymity/04 - 社科答集/中国的规模.md
@@ -91,7 +91,7 @@
 
 自己翻翻看，这是最新一期的电气自动化的目录，往期的也可以翻翻。
 
-[欢迎访问《电力系统自动化》网站！​aeps.alljournals.ac.cn/aeps/home![](https://pic4.zhimg.com/v2-03d2b485e192f81e916fea4e5235508b_180x120.jpg)](https://link.zhihu.com/?target=http%3A//aeps.alljournals.ac.cn/aeps/home)
+[欢迎访问《电力系统自动化》网站！](https://link.zhihu.com/?target=http%3A//aeps.alljournals.ac.cn/aeps/home)
 
 ---
 
