--- a/Anonymity/04 - 社科答集/制造业灵魂.md
+++ b/Anonymity/04 - 社科答集/制造业灵魂.md
@@ -11,7 +11,7 @@
 
 先看一个消息——鸿海前几天宣布成立了新产业联盟，这家产业联盟截止现在已有1737家成员企业，准备共同推出统一的开放纯电平台——MIH EV Kit。
 
-[MIH EV Open Platform │ Foxconn Technology Group​www.foxconn.com![图标](https://pic2.zhimg.com/v2-2656b7eec48aca312717d15a69d692f9_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.foxconn.com/en-us/mih-ev-open-platform)
+[MIH EV Open Platform │ Foxconn Technology Group​](https://link.zhihu.com/?target=https%3A//www.foxconn.com/en-us/mih-ev-open-platform)
 
 自主研发也是分方向的。
 
