--- a/Anonymity/04 - 社科答集/合理 1.md
+++ b/Anonymity/04 - 社科答集/合理 1.md
@@ -109,7 +109,7 @@ ta们只是强烈的感觉到你不是个成熟的人，靠不住，委托给你
 
 Like you are made of cellophane.
 
-[Mr Cellophane​b23.tv/ghKFTqg](https://link.zhihu.com/?target=https%3A//b23.tv/ghKFTqg)
+[Mr Cellophane](https://link.zhihu.com/?target=https%3A//b23.tv/ghKFTqg)
 
 **这个链接留着，将来你看得懂的时候多看几遍。**
 
