--- a/Anonymity/04 - 社科答集/和平演变.md
+++ b/Anonymity/04 - 社科答集/和平演变.md
@@ -11,7 +11,7 @@
 
 看看这个。
 
-[http://news.163.com/18/0130/13/D9DBE7LF000199ET.html](https://link.zhihu.com/?target=http%3A//news.163.com/18/0130/13/D9DBE7LF000199ET.html)它只是没有那么成功，但也不能说是毫无成效的。
+它只是没有那么成功，但也不能说是毫无成效的。
 
 也有很多厌恶资本主义的左派的艺术家、科学家投向苏联阵营——否则何来这么多让美国至今心有余悸的间谍呢？
 
