--- a/Anonymity/04 - 社科答集/性侵危机.md
+++ b/Anonymity/04 - 社科答集/性侵危机.md
@@ -61,7 +61,7 @@
 
 给你们看一个例子——
 
-[Clergy Sexual Abuse​ceaseabuse.org/fransart.html![](https://pic4.zhimg.com/v2-c828f3f94d875b6d3f956902b3a45293_180x120.jpg)](https://link.zhihu.com/?target=http%3A//ceaseabuse.org/fransart.html)
+[Clergy Sexual Abuse​](https://link.zhihu.com/?target=http%3A//ceaseabuse.org/fransart.html)
 
 稍微摘抄一下：
 
