--- a/Anonymity/04 - 社科答集/注目事实.md
+++ b/Anonymity/04 - 社科答集/注目事实.md
@@ -9,7 +9,7 @@
 
 在这答案下“闻声而怒”的各位看看这个判决书。
 
-[起诉书（彭某某盗窃案)_12309中国检察网​www.12309.gov.cn/12309/gj/hun/css/csstxq/zjxflws/202106/t20210621_9797963.shtml![](https://pic4.zhimg.com/v2-29c7cc0b375c2cf34177bd10a003807b_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.12309.gov.cn/12309/gj/hun/css/csstxq/zjxflws/202106/t20210621_9797963.shtml)
+[起诉书（彭某某盗窃案)_12309](https://link.zhihu.com/?target=https%3A//www.12309.gov.cn/12309/gj/hun/css/csstxq/zjxflws/202106/t20210621_9797963.shtml)
 
 具体分析请看
 
