--- a/Anonymity/05 - 科学答集/自然科学/最强耐力.md
+++ b/Anonymity/05 - 科学答集/自然科学/最强耐力.md
@@ -43,8 +43,8 @@
 
 人类在生理上应该无法胜过动物。——甚至不是不如杰出动物，而是连平庸动物都不如。人类只是借着伏击能力（尤其是投掷和远程射击能力）和足迹追踪能力胜过受了伤的普通动物。
 
-[科学答集7.8 万浏览 · 2594 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/304168613)
+[科学答集](https://zhihu.com/collection/304168613)
 
 这个很说明问题了，基本全中。
 
-[21世纪了，真的还有非洲部落靠跑死动物狩猎吗？4545 赞同 · 378 评论文章![](https://pic3.zhimg.com/v2-e4a7604d0ea53bd64388d461fc60a7ce_ipico.jpg)](https://zhuanlan.zhihu.com/p/85132908)
+[21世纪了，真的还有非洲部落靠跑死动物狩猎吗？](https://zhuanlan.zhihu.com/p/85132908)
