--- a/Anonymity/05 - 科学答集/自然科学/沙漠开发.md
+++ b/Anonymity/05 - 科学答集/自然科学/沙漠开发.md
@@ -21,4 +21,4 @@
 
 非不能也，是不为也。
 
-[https://wedocs.unep.org/bitstream/handle/20.500.11822/34301/SDOSC.pdf?sequence=4&isAllowed=y​wedocs.unep.org/bitstream/handle/20.500.11822/34301/SDOSC.pdf?sequence=4&isAllowed=y](https://link.zhihu.com/?target=https%3A//wedocs.unep.org/bitstream/handle/20.500.11822/34301/SDOSC.pdf%3Fsequence%3D4%26isAllowed%3Dy)
+[沙尘暴对海洋的影响-供决策者使用的科学环境评估](https://link.zhihu.com/?target=https%3A//wedocs.unep.org/bitstream/handle/20.500.11822/34301/SDOSC.pdf%3Fsequence%3D4%26isAllowed%3Dy)
