--- a/Anonymity/06 - 未来科技/L4.md
+++ b/Anonymity/06 - 未来科技/L4.md
@@ -21,8 +21,8 @@
 
 2）认为“现实世界的多样性固然必然超过人工智能算法的预料，但其失败的代价微不足道，可以无视”，这是灭霸式的社会工程论，和“处死残疾人是提高人口素质的小小代价”没有本质的区别。
 
-[BRT 和地铁相比有哪些优劣之处？183 赞同 · 51 评论回答](https://www.zhihu.com/question/20169848/answer/1891741754)
+[BRT 和地铁相比有哪些优劣之处？](https://www.zhihu.com/question/20169848/answer/1891741754)
 
-[我用 5G 网络可以干什么？6257 赞同 · 1569 评论回答![](https://pic3.zhimg.com/v2-a0b6a642e811170d4309bab75be6f822_180x120.jpg)](https://www.zhihu.com/question/314766480/answer/708378659)
+[我用 5G 网络可以干什么？](https://www.zhihu.com/question/314766480/answer/708378659)
 
 在第二篇里有一个自动驾驶的专章。
