--- a/Anonymity/07 - 军事技术与艺术/鱼虾测核酸.md
+++ b/Anonymity/07 - 军事技术与艺术/鱼虾测核酸.md
@@ -15,7 +15,7 @@
 
 这么急着相信，为啥？
 
-[厦门给鱼做核酸上热搜，鱼会感染新冠吗？专家解读 ​c.m.163.com/news/a/HF2MRIM90001899O.html?spss=sps_sem![](https://pic3.zhimg.com/v2-74ab4130a13f8aaa1305091b71e30512_ipico.jpg)](https://link.zhihu.com/?target=https%3A//c.m.163.com/news/a/HF2MRIM90001899O.html%3Fspss%3Dsps_sem)
+[厦门给鱼做核酸上热搜，鱼会感染新冠吗？专家解读](https://link.zhihu.com/?target=https%3A//c.m.163.com/news/a/HF2MRIM90001899O.html%3Fspss%3Dsps_sem)
 
 ---
 
