--- a/Anonymity/08 - 文艺答集/先活着.md
+++ b/Anonymity/08 - 文艺答集/先活着.md
@@ -25,9 +25,9 @@
 
 看完下面这两段东西：
 
-[中国拳​b23.tv/b21Ri9A](https://link.zhihu.com/?target=https%3A//b23.tv/b21Ri9A)
+[中国拳​](https://link.zhihu.com/?target=https%3A//b23.tv/b21Ri9A)
 
-[中国字​b23.tv/GDqTHqB](https://link.zhihu.com/?target=https%3A//b23.tv/GDqTHqB)
+[中国字](https://link.zhihu.com/?target=https%3A//b23.tv/GDqTHqB)
 
 **有这个节奏动作，才有这个节奏动作留下的痕迹。**
 
