--- a/Anonymity/08 - 文艺答集/圣蓝.md
+++ b/Anonymity/08 - 文艺答集/圣蓝.md
@@ -81,7 +81,7 @@
 
 日常所说“佛头青”，传说是一种蓝色牡丹，实际上很可能仍然是青金石。
 
-[张大千 佛头青牡丹​www.sothebys.com/en/buy/auction/2021/fine-chinese-paintings-2/zhang-da-qian-zhang-daqian-chang-dai-chien-1899-12](https://link.zhihu.com/?target=https%3A//www.sothebys.com/en/buy/auction/2021/fine-chinese-paintings-2/zhang-da-qian-zhang-daqian-chang-dai-chien-1899-12)
+[张大千 佛头青牡丹​](https://link.zhihu.com/?target=https%3A//www.sothebys.com/en/buy/auction/2021/fine-chinese-paintings-2/zhang-da-qian-zhang-daqian-chang-dai-chien-1899-12)
 
 ![](https://pica.zhimg.com/50/v2-37db1b6dee800bd191e6ab152079e674_720w.jpg?source=1940ef5c)
 
