--- a/Anonymity/08 - 文艺答集/遥远的救世主.md
+++ b/Anonymity/08 - 文艺答集/遥远的救世主.md
@@ -177,7 +177,7 @@
 
 关于“神学”
 
-[遥远的救世主_第十五章_豆豆_九九藏书网_手机版​m.99csw.com/book/3783/129172.html](https://link.zhihu.com/?target=https%3A//m.99csw.com/book/3783/129172.html)
+[遥远的救世主_第十五章_豆豆_九九藏书网](https://link.zhihu.com/?target=https%3A//m.99csw.com/book/3783/129172.html)
 
 单从小说情节而言，芮小丹要搞一套话术说服对方招供，没什么可深究的。
 
