--- a/Anonymity/09 - 神学答集/对立.md
+++ b/Anonymity/09 - 神学答集/对立.md
@@ -9,11 +9,11 @@
 
 听说过大乘基督教神学么？
 
-[赖品超、苏远泰：张纯一的佛化圣灵论​i.bokee.com![图标](https://pic1.zhimg.com/v2-bf96c5caffb2ccb2feedfec9eb9d6204_ipico.jpg)](https://link.zhihu.com/?target=http%3A//i.bokee.com/v1.php/blog/view/uname/rjjdt/bid/6903988)
+[赖品超、苏远泰：张纯一的佛化圣灵论](https://link.zhihu.com/?target=http%3A//i.bokee.com/v1.php/blog/view/uname/rjjdt/bid/6903988)
 
 再看一下这个东西：
 
-[https://www.catholic.org.tw/vatican/1PopeMeessage/6cirpcu/20171117/Ayuso%20Keynote%20Address.pdf​www.catholic.org.tw](https://link.zhihu.com/?target=https%3A//www.catholic.org.tw/vatican/1PopeMeessage/6cirpcu/20171117/Ayuso%2520Keynote%2520Address.pdf)
+[第六屆佛教徒與基督徒國際研討會專題演講](https://link.zhihu.com/?target=https%3A//www.catholic.org.tw/vatican/1PopeMeessage/6cirpcu/20171117/Ayuso%2520Keynote%2520Address.pdf)
 
 不要听这题目下一帮根本没有调查研究的人鬼扯。
 
