--- a/Anonymity/09 - 神学答集/斑点狗.md
+++ b/Anonymity/09 - 神学答集/斑点狗.md
@@ -106,7 +106,7 @@ OK，下面看这一幅图：
 
 只要人类成其为人类，人类就能看见神。至于祂是不是“真实存在”，这个看见是真实还是幻觉，或者更进一步的说——是把这感受当作幻觉更好，还是当作真实更好，这是另一个问题。
 
-[动量是实际存在的吗？​www.zhihu.com/question/317766244/answer/644332964?hb_wx_block=0](https://www.zhihu.com/question/317766244/answer/644332964?hb_wx_block=0)
+[动量是实际存在的吗？​](https://www.zhihu.com/question/317766244/answer/644332964?hb_wx_block=0)
 
 但不要对有人觉得这里有一条“斑点狗”觉得太惊讶。
 
