--- a/Anonymity/09 - 神学答集/祷告观.md
+++ b/Anonymity/09 - 神学答集/祷告观.md
@@ -325,7 +325,7 @@ Step4：神用赐你乐观的心理机制和天堂买单。你行了善，你不
 
 完美的同声祷告，应该是没有任何个人的声音可被单独识别的。这一原则直接催生了后世声乐合唱的基本审美观。这也是为什么教堂诗班被视为对信仰良好的训练和实践的一个根本原因。——至今，这个星球上最好的集体人声表现的桂冠，仍然在基督教会的头上牢牢的戴着。在可以预见的将来，也不可能旁落。这不是声乐技巧或者专业训练就足以达成的高度。或者换一个角度说——若无信仰，仅凭着对荣耀和利益的追求，是承受不了必要的指导和训练的。你是在歌唱，你是在技术性的注意不要破坏协调；他们是在诉说，把破坏协调视作背叛的罪恶忏悔。你们做的本不是一件事，观众也知道不是同一件事。观众对你表现的欣赏，是对歌唱技巧的欣赏，对诗班和谐的感应，却是对信仰直出肺腑的告白的触动。你有美，他们则不止于美，且有真善合一。
 
-听一听，你就明白为何公祷是为神悦纳的了——因为赞美诗本质也是公祷的一部分。[男孩唱诗班预告片​www.yugaopian.cn](https://link.zhihu.com/?target=https%3A//www.yugaopian.cn/movie/16317)
+听一听，你就明白为何公祷是为神悦纳的了——因为赞美诗本质也是公祷的一部分。[男孩唱诗班预告片](https://link.zhihu.com/?target=https%3A//www.yugaopian.cn/movie/16317)
 
 不妨找来完整版看看。
 
