--- a/Anonymity/11 - 新冠/物资消毒.md
+++ b/Anonymity/11 - 新冠/物资消毒.md
@@ -9,7 +9,7 @@
 
 1）理论基础
 
-[三论臭氧抗疫之三：实证臭氧灭活新冠病毒_中国网客户端​t.m.china.com.cn/convert/c_pz3qBNki.html![](https://pic4.zhimg.com/v2-f31357459ad27955944a772e78dfbd2f_ipico.jpg)](https://link.zhihu.com/?target=http%3A//t.m.china.com.cn/convert/c_pz3qBNki.html)
+[三论臭氧抗疫之三：实证臭氧灭活新冠病毒_中国网客户端​](https://link.zhihu.com/?target=http%3A//t.m.china.com.cn/convert/c_pz3qBNki.html)
 
 臭氧可以有效灭活新冠病毒。
 
