--- a/Anonymity/12 - 大过滤器/大过滤器（二）能源未来（上）.md
+++ b/Anonymity/12 - 大过滤器/大过滤器（二）能源未来（上）.md
@@ -48,7 +48,7 @@
 
 既然可控核聚变实用化真正的瓶颈在于理解极端条件下的物质行为，那么这个问题就有了另一个侧面——算力的侧面。如果我们长期无法做到经济的创造观察条件，那么我们最好在观察力、分析力和思考力方面做极大的提升，以便于从那黄金几秒里获得更多的成果。而这方面的进展预期要远远的好过对材料学进步的预期。我们的算力资源在飞速的增长（如果我们不会全浪费在比特币身上的话）；我们的算法本身也进步很大，人工智能在近些年有着肉眼可见的进步；而我们的数学虽然今年缺少领域性的开拓性的发展，但高等数学人才的数量正在稳步增长。有效算力的增长，大大的有利于缩短核聚变反应的实用化进程。
 
-[谷歌进军核聚变：联合开发提高核聚变效率新算法_手机网易网​3g.163.com​3g.163.com](https://link.zhihu.com/?target=https%3A//3g.163.com/tech/article/CQBFVMV100097U81.html%23adaptation%3Dpc%26refer%3Dhttps%253A%252F%252Fcn.bing.com%252Fsearch%253Fq%253D%2525E6%2525A0%2525B8%2525E8%252581%25259A%2525E5%25258F%252598%252B%2525E6%252595%252588%2525E7%25258E%252587%2526form%253DAPIPH1%2526PC%253DAPPL)
+[谷歌进军核聚变：联合开发提高核聚变效率新算法​](https://link.zhihu.com/?target=https%3A//3g.163.com/tech/article/CQBFVMV100097U81.html%23adaptation%3Dpc%26refer%3Dhttps%253A%252F%252Fcn.bing.com%252Fsearch%253Fq%253D%2525E6%2525A0%2525B8%2525E8%252581%25259A%2525E5%25258F%252598%252B%2525E6%252595%252588%2525E7%25258E%252587%2526form%253DAPIPH1%2526PC%253DAPPL)
 
 而这个反而更可能是推动可控核聚变研究发生重大突破的核心因素——不是材料学，而是人工智能、超级计算机和数学家团队。
 
