--- a/Anonymity/13 - 百年未有之变局/乌克兰老奶奶.md
+++ b/Anonymity/13 - 百年未有之变局/乌克兰老奶奶.md
@@ -21,7 +21,7 @@
 
 ![](https://pic3.zhimg.com/50/v2-dc3e6004cf6c4e906d5d76fba8a321a3_720w.jpg?source=1940ef5c)
 
-[https://m.weibo.cn/7583190896/4754994509908041​m.weibo.cn/7583190896/4754994509908041](https://link.zhihu.com/?target=https%3A//m.weibo.cn/7583190896/4754994509908041)
+[马里乌波尔，阳台老头 - 微博](https://link.zhihu.com/?target=https%3A//m.weibo.cn/7583190896/4754994509908041)
 
 假装ta们将来会在你们逃跑之后替你们打治安战吧。
 
