--- a/Anonymity/13 - 百年未有之变局/乌军吸毒问题.md
+++ b/Anonymity/13 - 百年未有之变局/乌军吸毒问题.md
@@ -11,10 +11,10 @@
 
 ![](https://pic3.zhimg.com/v2-e41dc9e2b7a5bb056d32f529504d4706_b.jpg)
 
-[https://taskandpurpose.com/news/ukraine-russia-war-army-veteran-volunteer/?amp​taskandpurpose.com/news/ukraine-russia-war-army-veteran-volunteer/?amp](https://link.zhihu.com/?target=https%3A//taskandpurpose.com/news/ukraine-russia-war-army-veteran-volunteer/%3Famp)
+[An Army vet’s realization in Ukraine: ‘So horrible or heartbreaking that you can’t continue’](https://link.zhihu.com/?target=https%3A//taskandpurpose.com/news/ukraine-russia-war-army-veteran-volunteer/%3Famp)
 
 这对乌军是一个早就存在的问题，早在开战前就已经有很多这类报道。
 
-[乌克兰军队如何堕落？乌逃兵揭示其现状，对比俄军待遇远超乌克兰​xw.qq.com/cmsid/20210228A07ICI00?f=newdc![](https://pic4.zhimg.com/v2-c9c63e740b49dd4a697d121ab201f5ab_180x120.jpg)](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210228A07ICI00%3Ff%3Dnewdc)
+[乌克兰军队如何堕落？乌逃兵揭示其现状，对比俄军待遇远超乌克兰​](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210228A07ICI00%3Ff%3Dnewdc)
 
 其实乌军到底士气如何，前途怎么样，看看这个就大概心里有数了。
