--- a/Anonymity/13 - 百年未有之变局/倒耻为荣.md
+++ b/Anonymity/13 - 百年未有之变局/倒耻为荣.md
@@ -11,7 +11,7 @@
 
 他是**在组织维护人道走廊的过程中被杀**。
 
-[俄媒确认：黑海舰队副指挥员在马里乌波尔阵亡_手机网易网​3g.163.com/news/article/H2VNKQI400018AP1.html?spss=adap_pc![](https://pic2.zhimg.com/v2-8d3de91519bcdeea7f9b139682e8fc09_ipico.jpg)](https://link.zhihu.com/?target=https%3A//3g.163.com/news/article/H2VNKQI400018AP1.html%3Fspss%3Dadap_pc)
+[俄媒确认：黑海舰队副指挥员在马里乌波尔阵亡_手机网易网](https://link.zhihu.com/?target=https%3A//3g.163.com/news/article/H2VNKQI400018AP1.html%3Fspss%3Dadap_pc)
 
 ![](https://pic2.zhimg.com/50/v2-739a5956e127b430bb23a9cba9ece11d_720w.jpg?source=1940ef5c)
 
