--- a/Anonymity/13 - 百年未有之变局/关于俄乌的关键分析汇总.md
+++ b/Anonymity/13 - 百年未有之变局/关于俄乌的关键分析汇总.md
@@ -33,18 +33,18 @@
 
 **我不比普京强。**
 
-[俄罗斯到底是想快打乌克兰还是慢打乌克兰？1715 赞同 · 367 评论回答](https://www.zhihu.com/question/522469201/answer/2400755721)
+[俄罗斯到底是想快打乌克兰还是慢打乌克兰？](https://www.zhihu.com/question/522469201/answer/2400755721)
 
-[俄罗斯那么大为什么打乌克兰那么吃力？2443 赞同 · 512 评论回答![](https://pic4.zhimg.com/v2-b24dc509e6910f8310b44848ab6f975b_120x160.jpg)](https://www.zhihu.com/question/519066714/answer/2426127720)
+[俄罗斯那么大为什么打乌克兰那么吃力？](https://www.zhihu.com/question/519066714/answer/2426127720)
 
-[核终战289 赞同 · 96 评论文章](https://zhuanlan.zhihu.com/p/484578437)
+[核终战](https://zhuanlan.zhihu.com/p/484578437)
 
-[双头鹰650 赞同 · 296 评论文章](https://zhuanlan.zhihu.com/p/488423249)
+[双头鹰](https://zhuanlan.zhihu.com/p/488423249)
 
-[俄罗斯将只向友好国家以卢布和国家本币结算的方式出口粮食，如何看待这一举措？会带来哪些影响？559 赞同 · 137 评论回答](https://www.zhihu.com/question/525408564/answer/2420654049)
+[俄罗斯将只向友好国家以卢布和国家本币结算的方式出口粮食，如何看待这一举措？会带来哪些影响？](https://www.zhihu.com/question/525408564/answer/2420654049)
 
-[俄乌五轮谈判后终向外界释出停火希望，欧股集体大涨，卢布兑美元再度升值，还有哪些信息值得关注？1667 赞同 · 105 评论回答](https://www.zhihu.com/question/524948826/answer/2414690445)
+[俄乌五轮谈判后终向外界释出停火希望，欧股集体大涨，卢布兑美元再度升值，还有哪些信息值得关注？](https://www.zhihu.com/question/524948826/answer/2414690445)
 
-[俄控区281 赞同 · 23 评论文章](https://zhuanlan.zhihu.com/p/489524293)
+[俄控区](https://zhuanlan.zhihu.com/p/489524293)
 
-[游击战387 赞同 · 164 评论文章](https://zhuanlan.zhihu.com/p/489425581)
+[游击战](https://zhuanlan.zhihu.com/p/489425581)
