--- a/Anonymity/13 - 百年未有之变局/勿忘我.md
+++ b/Anonymity/13 - 百年未有之变局/勿忘我.md
@@ -37,7 +37,7 @@
 
 各位，乌克兰正需要美元，欧元，他们正在发行战争债券，**利息高达两位数**，比你在家炒股高得多了，为什么你们不趁低搞一点？
 
-[https://www.enanyang.my/国际财经/乌克兰战争债券收益率11-但能兑现吗​www.enanyang.my/%E5%9B%BD%E9%99%85%E8%B4%A2%E7%BB%8F/%E4%B9%8C%E5%85%8B%E5%85%B0%E6%88%98%E4%BA%89%E5%80%BA%E5%88%B8%E6%94%B6%E7%9B%8A%E7%8E%8711-%E4%BD%86%E8%83%BD%E5%85%91%E7%8E%B0%E5%90%97](https://link.zhihu.com/?target=https%3A//www.enanyang.my/%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A2%25E7%25BB%258F/%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E5%2580%25BA%25E5%2588%25B8%25E6%2594%25B6%25E7%259B%258A%25E7%258E%258711-%25E4%25BD%2586%25E8%2583%25BD%25E5%2585%2591%25E7%258E%25B0%25E5%2590%2597)
+[乌克兰战争债券收益率11% 但能兑现吗?](https://link.zhihu.com/?target=https%3A//www.enanyang.my/%25E5%259B%25BD%25E9%2599%2585%25E8%25B4%25A2%25E7%25BB%258F/%25E4%25B9%258C%25E5%2585%258B%25E5%2585%25B0%25E6%2588%2598%25E4%25BA%2589%25E5%2580%25BA%25E5%2588%25B8%25E6%2594%25B6%25E7%259B%258A%25E7%258E%258711-%25E4%25BD%2586%25E8%2583%25BD%25E5%2585%2591%25E7%258E%25B0%25E5%2590%2597)
 
 喊口号就“必胜”“信心”，但一谈到钱，那就善财难舍，就原形毕露了，不是吗？
 
