--- a/Anonymity/13 - 百年未有之变局/巡飞弹.md
+++ b/Anonymity/13 - 百年未有之变局/巡飞弹.md
@@ -99,8 +99,6 @@
 
 下面这是弹簧刀600的基本信息：
 
-[https://wemp.app/posts/2dccdcd9-6bb4-449f-af62-a1dfa4b70be9​wemp.app/posts/2dccdcd9-6bb4-449f-af62-a1dfa4b70be9](https://link.zhihu.com/?target=https%3A//wemp.app/posts/2dccdcd9-6bb4-449f-af62-a1dfa4b70be9)
-
 核实过，引用的信息来自制造商的官方广告，只是截图翻译了一下。
 
 这里值得注意的还有一个puma侦察无人机的辅助系统。
@@ -111,7 +109,7 @@
 
 其次，无论是puma还是弹簧刀，都要依赖GPS，尽管它自称有反欺骗、反阻塞能力，但我怀疑阻塞干扰非常强大时它的工作能力。
 
-[俄罗斯夺回战场主动权的电磁利器：详解俄49军的田野21电子战系统​xw.qq.com/cmsid/20210428A09HSI00?f=newdc![](https://pic4.zhimg.com/v2-4fdb576d7c9588a4023e7ad34edcc77b_180x120.jpg)](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210428A09HSI00%3Ff%3Dnewdc)
+[俄罗斯夺回战场主动权的电磁利器：详解俄49军的田野21电子战系统​](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210428A09HSI00%3Ff%3Dnewdc)
 
 我仍然不认为这个系统能真的改变什么战场结果。
 
