--- a/Anonymity/13 - 百年未有之变局/所谓悬而未决.md
+++ b/Anonymity/13 - 百年未有之变局/所谓悬而未决.md
@@ -11,7 +11,7 @@
 
 1）俄罗斯从2016年开始计划启动军工综合体改革。2017年开始启动，2019年再次加码，2021年3月再次加码。
 
-[深度观察：俄拉开大规模军工改革序幕 1340家企业面临多种困境​www.xinhuanet.com/mil/2021-03/29/c_1211087758.htm](https://link.zhihu.com/?target=http%3A//www.xinhuanet.com/mil/2021-03/29/c_1211087758.htm)
+[深度观察：俄拉开大规模军工改革序幕 1340家企业面临多种困境​](https://link.zhihu.com/?target=http%3A//www.xinhuanet.com/mil/2021-03/29/c_1211087758.htm)
 
 而俄罗斯现在已经宣布要开始轰炸乌克兰国防军工企业。
 
