--- a/Anonymity/13 - 百年未有之变局/营级战术群.md
+++ b/Anonymity/13 - 百年未有之变局/营级战术群.md
@@ -11,7 +11,7 @@
 
 建议你们在往下看之前先看一看。
 
-[俄罗斯那么大为什么打乌克兰那么吃力？932 赞同 · 61 评论回答![](https://pic4.zhimg.com/v2-0cc82f0bca48d0a917e3e69e0ce4139b_120x160.jpg)](https://www.zhihu.com/question/519066714/answer/2415426253)
+[俄罗斯那么大为什么打乌克兰那么吃力？](https://www.zhihu.com/question/519066714/answer/2415426253)
 
 但是，我绝不同意这篇东西里对这些“问题“的定性——即将其视为“单纯的缺陷”。
 
@@ -209,9 +209,9 @@
 
 乌军早就有大量的吸毒现象，这没有什么很稀奇的。注意这是战前的报道。
 
-[乌克兰军队如何堕落？乌逃兵揭示其现状，对比俄军待遇远超乌克兰​xw.qq.com/cmsid/20210228A07ICI00?f=newdc![](https://pic4.zhimg.com/v2-c9c63e740b49dd4a697d121ab201f5ab_180x120.jpg)](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210228A07ICI00%3Ff%3Dnewdc)
+[乌克兰军队如何堕落？乌逃兵揭示其现状，对比俄军待遇远超乌克兰​](https://link.zhihu.com/?target=https%3A//xw.qq.com/cmsid/20210228A07ICI00%3Ff%3Dnewdc)
 
-[乌军俘虏身上搜出毒品​video.h5.weibo.cn/1034:4755702661709914/4755703271786142](https://link.zhihu.com/?target=https%3A//video.h5.weibo.cn/1034%3A4755702661709914/4755703271786142)
+[乌军俘虏身上搜出毒品](https://link.zhihu.com/?target=https%3A//video.h5.weibo.cn/1034%3A4755702661709914/4755703271786142)
 
 这也是为什么乌军这个阶段大量爆发丧心病狂、屡禁不止的虐杀俘虏、滥杀平民，而且还丧失理智的上传发布的原因。
 
@@ -401,4 +401,4 @@
 
 很多问题，都已经回答过了，先看完这个找不到再说：
 
-[百年未有之变局1.6 万浏览 · 712 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/787300206)
+[百年未有之变局](https://zhihu.com/collection/787300206)
