--- a/Anonymity/13 - 百年未有之变局/骗子的胆子.md
+++ b/Anonymity/13 - 百年未有之变局/骗子的胆子.md
@@ -23,7 +23,7 @@
 
 ![](https://pica.zhimg.com/50/v2-2426113c666e729b2c119a571fadc577_720w.jpg?source=1940ef5c)
 
-[乌克兰皮卡车​video.weibo.com/show?fid=1034:4763975859241083](https://link.zhihu.com/?target=https%3A//video.weibo.com/show%3Ffid%3D1034%3A4763975859241083)
+[乌克兰皮卡车​](https://link.zhihu.com/?target=https%3A//video.weibo.com/show%3Ffid%3D1034%3A4763975859241083)
 
 ---
 
@@ -45,6 +45,6 @@
 
 乌克兰的战争债券利息很高哦，11%，如果真的相信乌克兰必胜，这就跟捡钱一样。
 
-[乌克兰战争债券​www.lexology.com/library/detail.aspx?g=8982f6ed-2d91-4308-bfa2-95089fe7688d](https://link.zhihu.com/?target=https%3A//www.lexology.com/library/detail.aspx%3Fg%3D8982f6ed-2d91-4308-bfa2-95089fe7688d)
+[乌克兰战争债券​](https://link.zhihu.com/?target=https%3A//www.lexology.com/library/detail.aspx%3Fg%3D8982f6ed-2d91-4308-bfa2-95089fe7688d)
 
 干吧，阁下。
