--- a/Anonymity/01 - 家族答集/五分钟厨师.md
+++ b/Anonymity/01 - 家族答集/五分钟厨师.md
@@ -21,11 +21,11 @@
 
 例如：
 
-[联合利华饮食策划-专业厨师掌上菜谱库网站​www.unileverfoodsolutions.com.cn/![](https://pic4.zhimg.com/v2-970c1ab9358aaec4cfa439cf4cc5a3eb_ipico.jpg)](https://link.zhihu.com/?target=https%3A//www.unileverfoodsolutions.com.cn/)
+[联合利华饮食策划-专业厨师掌上菜谱库网站​](https://link.zhihu.com/?target=https%3A//www.unileverfoodsolutions.com.cn/)
 
-[精选菜谱 | 太太乐 | 太太乐_太太乐鸡精_太太乐官网​www.totole.com.cn/index.php?r=recipe%2Flist&mode=m![](https://pic3.zhimg.com/v2-6896fd4065c24d6505596431307a28b2_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.totole.com.cn/index.php%3Fr%3Drecipe%252Flist%26mode%3Dm)
+[精选菜谱 | 太太乐​](https://link.zhihu.com/?target=https%3A//www.totole.com.cn/index.php%3Fr%3Drecipe%252Flist%26mode%3Dm)
 
-[厨邦美食​m.chubang.cn/page.html?id=62![](https://pic2.zhimg.com/v2-b367baaa28ad4bf3bcf1eb5e81f6be91_180x120.jpg)](https://link.zhihu.com/?target=http%3A//m.chubang.cn/page.html%3Fid%3D62)
+[厨邦美食​](https://link.zhihu.com/?target=http%3A//m.chubang.cn/page.html%3Fid%3D62)
 
 对没学过烹饪的普通人，活用这个工具已经可以做出不少可以镇住场面的[大菜](https://www.zhihu.com/search?q=%E5%A4%A7%E8%8F%9C&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A1042698063%7D)了。
 
