--- a/Anonymity/04 - 社科答集/丢手机.md
+++ b/Anonymity/04 - 社科答集/丢手机.md
@@ -23,6 +23,6 @@
 
 3）至于说手机里存的私人信息，如果是苹果手机，你可以远程抹掉。
 
-[如果 iPhone、iPad 或 iPod touch 丢失或失窃​support.apple.com/zh-cn/HT201472![](https://pic1.zhimg.com/v2-42598915350b55d1befdff170e4bd11c_180x120.jpg)](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT201472)
+[如果 iPhone、iPad 或 iPod touch 丢失或失窃​](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT201472)
 
 其他安卓手机厂商也一般都有自己的方案，自己去主页查询。
