--- a/Anonymity/04 - 社科答集/紧急呼救.md
+++ b/Anonymity/04 - 社科答集/紧急呼救.md
@@ -11,16 +11,16 @@
 
 阅读以下链接，做好设置，最好练习一下。
 
-[在 iPhone 上使用“SOS 紧急联络”功能​support.apple.com/zh-cn/HT208076![](https://pic2.zhimg.com/v2-2504cdef61b166bbe94150a073183291_120x160.jpg)](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT208076)
+[在 iPhone 上使用“SOS 紧急联络”功能​](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT208076)
 
-[使用 Apple Watch 上的“SOS 紧急联络”功能​support.apple.com/zh-cn/HT206983![](https://pic1.zhimg.com/v2-6b97af4a65bd36e0a93ff9a7b6b639c4_ipico.jpg)](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT206983)
+[使用 Apple Watch 上的“SOS 紧急联络”功能​](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT206983)
 
-[使用 Apple Watch 上的“摔倒检测”​support.apple.com/zh-cn/HT208944![](https://pic1.zhimg.com/v2-0efa4e0c5507f8fb41bceba5cc450bc8_ipico.jpg)](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT208944)
+[使用 Apple Watch 上的“摔倒检测”​](https://link.zhihu.com/?target=https%3A//support.apple.com/zh-cn/HT208944)
 
-[在紧急情况下使用安卓手机获得帮助​support.google.com/android/answer/9319337?hl=zh-Hans](https://link.zhihu.com/?target=https%3A//support.google.com/android/answer/9319337%3Fhl%3Dzh-Hans)
+[在紧急情况下使用安卓手机获得帮助​](https://link.zhihu.com/?target=https%3A//support.google.com/android/answer/9319337%3Fhl%3Dzh-Hans)
 
-[使用紧急求助和呼叫 | 华为官网​consumer.huawei.com/cn/support/content/zh-cn15768997/](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/content/zh-cn15768997/)
+[使用紧急求助和呼叫 | 华为官网](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/content/zh-cn15768997/)
 
-[教爸妈用手机 | 巧用紧急求助功能，给爸妈多一分守护​consumer.huawei.com/cn/support/article/zh-cn15675895/](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/article/zh-cn15675895/)
+[教爸妈用手机 | 巧用紧急求助功能，给爸妈多一分守护​](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/article/zh-cn15675895/)
 
-[使用跌倒检测发起SOS紧急求助 | 华为官网​consumer.huawei.com/cn/support/content/zh-cn15817400/![](https://pic4.zhimg.com/v2-62aafda8383594f4c76639e7bdaefa8b_120x160.jpg)](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/content/zh-cn15817400/)
+[使用跌倒检测发起SOS紧急求助 | 华为官网​](https://link.zhihu.com/?target=https%3A//consumer.huawei.com/cn/support/content/zh-cn15817400/)
