--- a/Anonymity/04 - 社科答集/防不胜防.md
+++ b/Anonymity/04 - 社科答集/防不胜防.md
@@ -9,17 +9,17 @@
 
 虽然有点煞风景，但是中国体育局应该是有纪律的——禁止国家队运动员食用非规定来源的食品。
 
-[国家体育总局反兴奋剂中心​www.sport.gov.cn/fxfjzx/n5555/c794430/content.html](https://link.zhihu.com/?target=http%3A//www.sport.gov.cn/fxfjzx/n5555/c794430/content.html)
+[国家体育总局反兴奋剂中心​](https://link.zhihu.com/?target=http%3A//www.sport.gov.cn/fxfjzx/n5555/c794430/content.html)
 
-[排管中心严防兴奋剂 禁止运动员叫外卖及私自外出就餐​m.k.sohu.com/d/510017963?channelId=2&page=5![](https://pic1.zhimg.com/v2-18eb23a519c08065ed4b9f4370659cc8_180x120.jpg)](https://link.zhihu.com/?target=https%3A//m.k.sohu.com/d/510017963%3FchannelId%3D2%26page%3D5)
+[排管中心严防兴奋剂 禁止运动员叫外卖及私自外出就餐​](https://link.zhihu.com/?target=https%3A//m.k.sohu.com/d/510017963%3FchannelId%3D2%26page%3D5)
 
-[奥运冠军晒运动员禁用食品 出去吃火锅就别想了​m.jiemian.com/article/999725.html![](https://pic4.zhimg.com/v2-a6cf2b6d3f3f39378332a6e00ec94583_ipico.jpg)](https://link.zhihu.com/?target=https%3A//m.jiemian.com/article/999725.html)
+[奥运冠军晒运动员禁用食品 出去吃火锅就别想了​](https://link.zhihu.com/?target=https%3A//m.jiemian.com/article/999725.html)
 
 看清楚国乒自己的明文规定：
 
 ![](https://pic1.zhimg.com/50/v2-e6b94e4fdc5012378bdf37b5aefbb263_720w.jpg?source=1940ef5c)
 
-[【反兴奋剂】有这么一群人，不叫外卖，不私自外出就餐！_广州日报大洋网​news.dayoo.com/gzrbyc/202102/06/158752_53787493.htm![](https://pic3.zhimg.com/v2-a047bc5ce1244871b033977ae536bb26_ipico.jpg)](https://link.zhihu.com/?target=https%3A//news.dayoo.com/gzrbyc/202102/06/158752_53787493.htm)
+[【反兴奋剂】有这么一群人，不叫外卖，不私自外出就餐！](https://link.zhihu.com/?target=https%3A//news.dayoo.com/gzrbyc/202102/06/158752_53787493.htm)
 
 赛后还要补测兴奋剂的，回头测出什么奇怪的结果恐怕说不清。
 
