--- a/Anonymity/05 - 科学答集/应用科学/印刷信息量.md
+++ b/Anonymity/05 - 科学答集/应用科学/印刷信息量.md
@@ -19,4 +19,4 @@
 
 ![](https://pic2.zhimg.com/50/v2-98ca652dad720ea017469f0b4b33bdc3_720w.jpg?source=1940ef5c)
 
-[二维码信息容量是多少？​wap.yesky.com/soft/296/447509796.shtml](https://link.zhihu.com/?target=http%3A//wap.yesky.com/soft/296/447509796.shtml)
+[二维码信息容量是多少？​](https://link.zhihu.com/?target=http%3A//wap.yesky.com/soft/296/447509796.shtml)
