--- a/Anonymity/05 - 科学答集/应用科学/抢快还是拳快.md
+++ b/Anonymity/05 - 科学答集/应用科学/抢快还是拳快.md
@@ -9,4 +9,4 @@
 
 看看，再想想。
 
-【史上最快的神枪手Bob Munden连肉眼也看不见的射速！-哔哩哔哩】[https://b23.tv/6swZwu](https://link.zhihu.com/?target=https%3A//b23.tv/6swZwu)
+[【史上最快的神枪手Bob Munden连肉眼也看不见的射速！-哔哩哔哩】](https://link.zhihu.com/?target=https%3A//b23.tv/6swZwu)
