--- a/Anonymity/05 - 科学答集/应用科学/煤电核电绿电.md
+++ b/Anonymity/05 - 科学答集/应用科学/煤电核电绿电.md
@@ -63,18 +63,18 @@
 
 在这一点上，我们比俄罗斯有显著优势。
 
-[美国核燃料工作组提出恢复美国核能全球领导地位战略----中国科学院科技战略咨询研究院​www.casisd.cn/zkcg/ydkb/kjzcyzxkb/2020kjzc/kjzczxkb202006/202007/t20200722_5639175.html](https://link.zhihu.com/?target=http%3A//www.casisd.cn/zkcg/ydkb/kjzcyzxkb/2020kjzc/kjzczxkb202006/202007/t20200722_5639175.html)
+[美国核燃料工作组提出恢复美国核能全球领导地位战略-中国科学院科技战略咨询研究院](https://link.zhihu.com/?target=http%3A//www.casisd.cn/zkcg/ydkb/kjzcyzxkb/2020kjzc/kjzczxkb202006/202007/t20200722_5639175.html)
 
-[5900亿欧元核电大国转身，法国可再生能源行业机遇浮出水面 - Energy and Natural Resources - France​www.mondaq.com/france/renewables/882502/590020159274312080326680300052282322269367163652365292278612226921487208772998333021283043489219994264263693528014209862770038754-![](https://pic4.zhimg.com/v2-0df0e008a3d6d2185d7c7cec96d18a4b_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.mondaq.com/france/renewables/882502/590020159274312080326680300052282322269367163652365292278612226921487208772998333021283043489219994264263693528014209862770038754-)
+[5900亿欧元核电大国转身，法国可再生能源行业机遇浮出水面](https://link.zhihu.com/?target=https%3A//www.mondaq.com/france/renewables/882502/590020159274312080326680300052282322269367163652365292278612226921487208772998333021283043489219994264263693528014209862770038754-)
 
-[“一带一路”核电出口国际竞争力分析-新闻-能源资讯-中国能源网​www.china5e.com/m/news/news-1096704-1.html](https://link.zhihu.com/?target=https%3A//www.china5e.com/m/news/news-1096704-1.html)
+[“一带一路”核电出口国际竞争力分析-中国能源网](https://link.zhihu.com/?target=https%3A//www.china5e.com/m/news/news-1096704-1.html)
 
-[《中国核能发展报告2021》：我国在建机组装机容量连续多年保持全球第一--经济・科技--人民网​finance.people.com.cn/n1/2021/0418/c1004-32080738.html![](https://pic2.zhimg.com/v2-169f723f8aef7b934f2a620e93fdc2ad_180x120.jpg)](https://link.zhihu.com/?target=http%3A//finance.people.com.cn/n1/2021/0418/c1004-32080738.html)
+[《中国核能发展报告2021》：我国在建机组装机容量连续多年保持全球第一-人民网](https://link.zhihu.com/?target=http%3A//finance.people.com.cn/n1/2021/0418/c1004-32080738.html)
 
 再说绿色能源。
 
 我们在太阳能电池、风力发电方面的优势也非常明显。煤电留出的市场空间，可能大半都会是绿色清洁能源来填补，但绿电就属于纯商业利益，没什么太多好说的了。
 
-[麦肯锡：光伏产业全球绝对领先--中国光伏产业步入高质量发展期----中国科学院青岛生物能源与过程研究所​www.qibebt.cas.cn/xwzx/kydt/202001/t20200121_5490661.html![](https://pic3.zhimg.com/v2-ae3dc61d1eb71e1d213803d83974c53e_180x120.jpg)](https://link.zhihu.com/?target=http%3A//www.qibebt.cas.cn/xwzx/kydt/202001/t20200121_5490661.html)
+[麦肯锡：光伏产业全球绝对领先--中国光伏产业步入高质量发展期-中国科学院青岛生物能源与过程研究所​](https://link.zhihu.com/?target=http%3A//www.qibebt.cas.cn/xwzx/kydt/202001/t20200121_5490661.html)
 
-[中美风电行业产业竞争力比较分析 - 学术文章 - 中国国际经济交流中心​www.cciee.org.cn/Detail.aspx?newsId=16369&TId=231![](https://pic1.zhimg.com/v2-16620d584a698a645d467b2916bb0310_180x120.jpg)](https://link.zhihu.com/?target=http%3A//www.cciee.org.cn/Detail.aspx%3FnewsId%3D16369%26TId%3D231)
+[中美风电行业产业竞争力比较分析-中国国际经济交流中心](https://link.zhihu.com/?target=http%3A//www.cciee.org.cn/Detail.aspx%3FnewsId%3D16369%26TId%3D231)
