--- a/Anonymity/07 - 军事技术与艺术/暴军舰.md
+++ b/Anonymity/07 - 军事技术与艺术/暴军舰.md
@@ -23,8 +23,8 @@
 
 所以，战时是不太会“暴大船”的，这个问题已经是伪问题了。
 
-[http://www.andrewerickson.com/wp-content/uploads/2013/07/Chinese-Mine-Warfare_China-Maritime-Study-3_2009-August_CHINESE_Traditional.pdf​www.andrewerickson.com/wp-content/uploads/2013/07/Chinese-Mine-Warfare_China-Maritime-Study-3_2009-August_CHINESE_Traditional.pdf](https://link.zhihu.com/?target=http%3A//www.andrewerickson.com/wp-content/uploads/2013/07/Chinese-Mine-Warfare_China-Maritime-Study-3_2009-August_CHINESE_Traditional.pdf)
+[中國水雷作戰 中國海軍的「殺手鐧](https://link.zhihu.com/?target=http%3A//www.andrewerickson.com/wp-content/uploads/2013/07/Chinese-Mine-Warfare_China-Maritime-Study-3_2009-August_CHINESE_Traditional.pdf)
 
-[UUV自航发射鱼雷过程仿真​yljs.paperopen.com/oa/darticle.aspx?type=view&id=201405002](https://link.zhihu.com/?target=http%3A//yljs.paperopen.com/oa/darticle.aspx%3Ftype%3Dview%26id%3D201405002)
+[UUV自航发射鱼雷过程仿真​](https://link.zhihu.com/?target=http%3A//yljs.paperopen.com/oa/darticle.aspx%3Ftype%3Dview%26id%3D201405002)
 
-[美军巡飞弹作战能力探索-面包板社区​www.eet-china.com/mp/a61828.html![](https://pic1.zhimg.com/v2-3fc82f60d4569cb67d4cf6a08c3ddbd0_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.eet-china.com/mp/a61828.html)
+[美军巡飞弹作战能力探索-面包板社区](https://link.zhihu.com/?target=https%3A//www.eet-china.com/mp/a61828.html)
