--- a/Anonymity/08 - 文艺答集/伊斯兰女性.md
+++ b/Anonymity/08 - 文艺答集/伊斯兰女性.md
@@ -23,7 +23,7 @@
 
 甚至连性观念都绝不是现代西方媒体尝试描画的那种鬼样子。
 
-[倭马亚“艳情诗”与“贞情诗”中女性形象对比​wk.baidu.com/view/e52309d27f1922791688e841?pcf=2&re=view&bfetype=new](https://link.zhihu.com/?target=https%3A//wk.baidu.com/view/e52309d27f1922791688e841%3Fpcf%3D2%26re%3Dview%26bfetype%3Dnew)
+[倭马亚“艳情诗”与“贞情诗”中女性形象对比](https://link.zhihu.com/?target=https%3A//wk.baidu.com/view/e52309d27f1922791688e841%3Fpcf%3D2%26re%3Dview%26bfetype%3Dnew)
 
 别的先不提，难道能发明肚皮舞的文明真的会是不知情色为何物的吗？
 
@@ -45,4 +45,4 @@
 
 说到这里，还有一件轶事——一位“阿拉伯慈禧太后”——也许是史上权力最大的乌克兰女性：
 
-[许蕾姆苏丹_百度百科​baike.baidu.com/item/%E8%AE%B8%E8%95%BE%E5%A7%86%E8%8B%8F%E4%B8%B9/9828561![](https://pic3.zhimg.com/v2-40c9866a48d0d9700b372b82ec00b83e_ipico.jpg)](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%25E8%25AE%25B8%25E8%2595%25BE%25E5%25A7%2586%25E8%258B%258F%25E4%25B8%25B9/9828561)
+[许蕾姆苏丹_百度百科​](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%25E8%25AE%25B8%25E8%2595%25BE%25E5%25A7%2586%25E8%258B%258F%25E4%25B8%25B9/9828561)
