--- a/Anonymity/08 - 文艺答集/导演.md
+++ b/Anonymity/08 - 文艺答集/导演.md
@@ -183,9 +183,9 @@ ta在表演时，很难简单的通过绿幕背景直观的意会到自己表达
 
 [A sneak peek at MetaHuman Creator: high-fidelity digital humans made easy](https://link.zhihu.com/?target=https%3A//www.unrealengine.com/en-US/blog/a-sneak-peek-at-metahuman-creator-high-fidelity-digital-humans-made-easy)再看看这个：
 
-[https://www.youtube.com/watch?v=tdxMo11KJGk](https://link.zhihu.com/?target=https%3A//www.youtube.com/watch%3Fv%3DtdxMo11KJGk)再看看这个，不妨直接亲手试一试：
+[XNect: Real-time Multi-person 3D Motion Capture With a Single RGB Camera (SIGGRAPH 2020)](https://link.zhihu.com/?target=https%3A//www.youtube.com/watch%3Fv%3DtdxMo11KJGk)再看看这个，不妨直接亲手试一试：
 
-[http://nvidia-research-mingyuliu.com/gaugan](https://link.zhihu.com/?target=http%3A//nvidia-research-mingyuliu.com/gaugan)
+[nvidia-research-mingyuliu](https://link.zhihu.com/?target=http%3A//nvidia-research-mingyuliu.com/gaugan)
 
 **电影制作正在迅速的虚拟化。**
 
