--- a/Anonymity/08 - 文艺答集/疾在肠胃.md
+++ b/Anonymity/08 - 文艺答集/疾在肠胃.md
@@ -41,7 +41,7 @@
 
 **他这说的是要杀荣禄袁世凯，**这里头连慈禧都不包括。
 
-[谭嗣同是一位典型的改良主义者​sxsyj.nju.edu.cn/_upload/article/files/ab/7f/442c5bb84a5a9e37fbe8249cf9f4/72beb347-3682-4a41-9844-3af713ac48f5.pdf](https://link.zhihu.com/?target=https%3A//sxsyj.nju.edu.cn/_upload/article/files/ab/7f/442c5bb84a5a9e37fbe8249cf9f4/72beb347-3682-4a41-9844-3af713ac48f5.pdf)
+[谭嗣同是一位典型的改良主义者​](https://link.zhihu.com/?target=https%3A//sxsyj.nju.edu.cn/_upload/article/files/ab/7f/442c5bb84a5a9e37fbe8249cf9f4/72beb347-3682-4a41-9844-3af713ac48f5.pdf)
 
 第三，你急需寻求精神和心理方面的专业帮助了。
 
