--- a/Anonymity/10 - “就你机灵”系列/忙起来.md
+++ b/Anonymity/10 - “就你机灵”系列/忙起来.md
@@ -9,7 +9,7 @@
 
 能抑制抑郁症的那种忙，必须是为了career忙，不能是为了job忙。为了job忙容易忙出抑郁症。
 
-[work & job​m.bilibili.com/video/BV1y64y1U7xQ?from=search&seid=5412625182105074358&spm_id_from=333.337.0.0](https://link.zhihu.com/?target=https%3A//m.bilibili.com/video/BV1y64y1U7xQ%3Ffrom%3Dsearch%26seid%3D5412625182105074358%26spm_id_from%3D333.337.0.0)
+[work & job](https://link.zhihu.com/?target=https%3A//m.bilibili.com/video/BV1y64y1U7xQ%3Ffrom%3Dsearch%26seid%3D5412625182105074358%26spm_id_from%3D333.337.0.0)
 
 这个看一看。
 
