--- a/Anonymity/13 - 百年未有之变局/妖灵退散.md
+++ b/Anonymity/13 - 百年未有之变局/妖灵退散.md
@@ -46,8 +46,8 @@
 
 这里面有很多当年的古战场，不妨去考一下古。
 
-[如何看待武汉市青山区用垃圾车装爱心肉？4093 关注 · 1138 回答问题](https://www.zhihu.com/question/378679948)
+[如何看待武汉市青山区用垃圾车装爱心肉？](https://www.zhihu.com/question/378679948)
 
-[如何评价甘肃省妇幼保健院为援鄂队伍护士集体剃光头一事?4141 关注 · 1571 回答问题![](https://pic3.zhimg.com/v2-dc05c0bebc04f26815e1c5de8313a062_180x120.jpg)](https://www.zhihu.com/question/372623392)
+[如何评价甘肃省妇幼保健院为援鄂队伍护士集体剃光头一事?](https://www.zhihu.com/question/372623392)
 
-[新冠9587 浏览 · 251 关注收藏夹![](https://pic2.zhimg.com/80/v2-b2918ef3f9c19572ba524ac59316a917_1440w.png)](https://zhihu.com/collection/555541583)
+[新冠](https://zhihu.com/collection/555541583)
