--- a/Anonymity/13 - 百年未有之变局/布查.md
+++ b/Anonymity/13 - 百年未有之变局/布查.md
@@ -17,9 +17,9 @@
 
 我们看不看得到布查的真相？
 
-[China’s high-resolution optical remote sensing satellites and their mapping applications​www.tandfonline.com/doi/full/10.1080/10095020.2020.1838957![](https://pic1.zhimg.com/v2-9c4d3d77521d4886529015687cf02fc0_120x160.jpg)](https://link.zhihu.com/?target=https%3A//www.tandfonline.com/doi/full/10.1080/10095020.2020.1838957)
+[China’s high-resolution optical remote sensing satellites and their mapping applications​](https://link.zhihu.com/?target=https%3A//www.tandfonline.com/doi/full/10.1080/10095020.2020.1838957)
 
-[2021年在全球及中国卫星发射数量、在轨卫星及市场规模分析[图]​m.chyxx.com/industry/1100829.html![](https://pic4.zhimg.com/v2-b3e6a2d2eae5fdcd1d3bb69a78be5acb_180x120.jpg)](https://link.zhihu.com/?target=https%3A//m.chyxx.com/industry/1100829.html)
+[2021年在全球及中国卫星发射数量、在轨卫星及市场规模分析[图]​](https://link.zhihu.com/?target=https%3A//m.chyxx.com/industry/1100829.html)
 
 2）我们在联合国投票和在外交场合进行对俄立场表态时，有没有考察过“确实是俄方犯罪，而且可以轻易被多国侦察卫星证实”的政治风险？
 
