--- a/Anonymity/13 - 百年未有之变局/悲壮.md
+++ b/Anonymity/13 - 百年未有之变局/悲壮.md
@@ -9,7 +9,7 @@
 
 研究一下：
 
-[中国成为格鲁吉亚最大出口市场-新华网​www.news.cn/2022-01/22/c_1128288512.htm](https://link.zhihu.com/?target=http%3A//www.news.cn/2022-01/22/c_1128288512.htm)
+[中国成为格鲁吉亚最大出口市场-新华网​](https://link.zhihu.com/?target=http%3A//www.news.cn/2022-01/22/c_1128288512.htm)
 
 ![](https://pic1.zhimg.com/50/v2-eb323e1cecc5610cbbf6e25e6749ff7e_720w.jpg?source=1940ef5c)
 
