--- a/Anonymity/13 - 百年未有之变局/网军.md
+++ b/Anonymity/13 - 百年未有之变局/网军.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *31/03/2022*
-> Link:
+> Link: [[[照妖]]] [[尊重你的敌人]] [[认知战、信息茧房及其它]] [[“纪实”]] [[燎原幻觉]] [[膝盖的目的]] [[反弹琵琶]] [[怎样读新闻]] [[观点与事实]]
 > Tag: #处事
 > 沙海拾金:
 
@@ -16,29 +16,3 @@
 顺着关注列表，可以看到大量的其它网军账号。
 
 这类“空联空”现象是一个很显著的特征，可以自己验证看看。
-
-照妖：
-[https://zhuanlan.zhihu.com/p/481507703](https://zhuanlan.zhihu.com/p/481507703)
-
-尊重你的敌人：
-[https://www.zhihu.com/question/481658451/answer/2392573786](https://www.zhihu.com/question/481658451/answer/2392573786)
-
-认知战、信息茧房及其它：
-[https://zhuanlan.zhihu.com/p/482718210](https://zhuanlan.zhihu.com/p/482718210)
-
-“纪实“：
-[https://www.zhihu.com/question/379065733/answer/1079204276](https://www.zhihu.com/question/379065733/answer/1079204276)
-
-燎原幻觉：[https://www.zhihu.com/question/448183600/answer/2116020337](https://www.zhihu.com/question/448183600/answer/2116020337)
-
-膝盖的目的：
-[https://github.com/itrewub/jh-notes/blob/4ce6079b4a87d2f237a76038d1f4d22c755bebfd/titled/%E8%86%9D%E7%9B%96%E7%9A%84%E7%9B%AE%E7%9A%84.md](http://link.zhihu.com/?target=https%3A//github.com/itrewub/jh-notes/blob/4ce6079b4a87d2f237a76038d1f4d22c755bebfd/titled/%25E8%2586%259D%25E7%259B%2596%25E7%259A%2584%25E7%259B%25AE%25E7%259A%2584.md)
-
-反弹琵琶：
-[https://www.zhihu.com/question/465827983/answer/1949343689](https://www.zhihu.com/question/465827983/answer/1949343689)
-
-怎样读新闻：
-[https://www.zhihu.com/question/22020980/answer/798415609](https://www.zhihu.com/question/22020980/answer/798415609)
-
-观点与事实：
-[https://www.zhihu.com/question/2130](https://www.zhihu.com/question/21304080/answer/2235939694)
