--- a/Anonymity/13 - 百年未有之变局/长平.md
+++ b/Anonymity/13 - 百年未有之变局/长平.md
@@ -97,4 +97,4 @@
 
 可以回顾一下：
 
-[长平之战（中国战国时期著名战役）_百度百科​baike.baidu.com/item/%E9%95%BF%E5%B9%B3%E4%B9%8B%E6%88%98/66472![](https://pic4.zhimg.com/v2-a64774de231eee7f3449f6649c9cdaef_180x120.jpg)](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%25E9%2595%25BF%25E5%25B9%25B3%25E4%25B9%258B%25E6%2588%2598/66472)
+[长平之战（中国战国时期著名战役）_百度百科​](https://link.zhihu.com/?target=https%3A//baike.baidu.com/item/%25E9%2595%25BF%25E5%25B9%25B3%25E4%25B9%258B%25E6%2588%2598/66472)
