--- a/Anonymity/13 - 百年未有之变局/长期承诺.md
+++ b/Anonymity/13 - 百年未有之变局/长期承诺.md
@@ -12,11 +12,11 @@
 
 日本是富裕国家，但日本却不是有盈余的国家。
 
-[巨额财政赤字拖累日本经济--经济・科技--人民网​finance.people.com.cn/n1/2021/1113/c1004-32281281.html![](https://pic1.zhimg.com/v2-4dcd4eb9e8d03d687f4994e8f9addb44_ipico.jpg)](https://link.zhihu.com/?target=http%3A//finance.people.com.cn/n1/2021/1113/c1004-32281281.html)
+[巨额财政赤字拖累日本经济--经济・科技--人民网​](https://link.zhihu.com/?target=http%3A//finance.people.com.cn/n1/2021/1113/c1004-32281281.html)
 
 反过来，也许越南很穷，但是越南却是有盈余的国家。
 
-[2021年前5个月越南财政盈余约37亿美元-新华丝路​www.imsilkroad.com/news/p/455200.html![](https://pic4.zhimg.com/v2-7f06910d39c4ea72014dfd4431f73507_180x120.jpg)](https://link.zhihu.com/?target=https%3A//www.imsilkroad.com/news/p/455200.html)
+[2021年前5个月越南财政盈余约37亿美元-新华丝路](https://link.zhihu.com/?target=https%3A//www.imsilkroad.com/news/p/455200.html)
 
 事情当然没有这么简单，但可以体会一下日本真要做到这一点的实际困难。
 
