fix link format
修复了一些其他的链接问题

--- a/Anonymity/01 - 家族答集/溢美之词.md
+++ b/Anonymity/01 - 家族答集/溢美之词.md
@@ -13,7 +13,7 @@
 
 老实说，完全不清楚“现实”和“理想”之间有啥好平衡的。
 
-[年轻人怎么在这个喧嚣的社会中不迷失自我和坚守理想？1802 赞同 · 242 评论回答](https://www.zhihu.com/question/26557967/answer/1814588032)
+[年轻人怎么在这个喧嚣的社会中不迷失自我和坚守理想？](https://www.zhihu.com/question/26557967/answer/1814588032)
 
 这是想说“定目标不要太不切实际”的吧？
 
