--- a/Anonymity/01 - 家族答集/看得见爱的眼睛.md
+++ b/Anonymity/01 - 家族答集/看得见爱的眼睛.md
@@ -35,7 +35,7 @@
 
 这也是为什么爱会带来运气。
 
-[运气极差的人该如何从头开始恢复运气?1363 赞同 · 277 评论回答](https://www.zhihu.com/question/421719141/answer/1481010073)
+[运气极差的人该如何从头开始恢复运气?](https://www.zhihu.com/question/421719141/answer/1481010073)
 
 因为你日常就把各样的爱实践起来，你就会有更好的识别的视力。然后你会凭这个视力看见越来越多的有爱的人。世界在你眼里就越来越光明。而同样，那些有爱的人也会看见你。
 
