--- a/Anonymity/01 - 家族答集/评头论足.md
+++ b/Anonymity/01 - 家族答集/评头论足.md
@@ -27,7 +27,7 @@
 
 这当然可能。
 
-[怎样才能做到「对事不对人」？404 赞同 · 96 评论回答](https://www.zhihu.com/question/21062014/answer/1011783718)
+[怎样才能做到「对事不对人」？](https://www.zhihu.com/question/21062014/answer/1011783718)
 
 ---
 
