--- a/Anonymity/03 - 第一性/亲密关系的充分理由.md
+++ b/Anonymity/03 - 第一性/亲密关系的充分理由.md
@@ -73,6 +73,6 @@ ta自己都觉得自己枯竭了，以为你肯定也该枯竭了，结果意外
 
 是这个人值不值得成为你牺牲的理由。
 
-[三人同心603 赞同 · 88 评论回答](https://www.zhihu.com/question/522754631/answer/2403793659)
+[三人同心](https://www.zhihu.com/question/522754631/answer/2403793659)
 
-[最高效的找对象途径是什么？1628 赞同 · 282 评论回答](https://www.zhihu.com/question/37522813/answer/2206624921)
+[最高效的找对象途径是什么？](https://www.zhihu.com/question/37522813/answer/2206624921)
