--- a/Anonymity/03 - 第一性/何如不问.md
+++ b/Anonymity/03 - 第一性/何如不问.md
@@ -206,4 +206,4 @@
 
 **ta还在，就是真爱，不再需要任何其他证明。**
 
-[怎样确定你的女朋友（男朋友）是适合的结婚对象？1446 赞同 · 892 评论回答](https://www.zhihu.com/question/21778422/answer/684430223)
+[怎样确定你的女朋友（男朋友）是适合的结婚对象？](https://www.zhihu.com/question/21778422/answer/684430223)
