--- a/Anonymity/03 - 第一性/进化心理学.md
+++ b/Anonymity/03 - 第一性/进化心理学.md
@@ -133,7 +133,7 @@
 
 建议你先看看：
 
-[如何看待作家方方遭举报，被指疫情期间用特权送亲属出境？631 赞同 · 100 评论回答](https://www.zhihu.com/question/379065733/answer/1079204276)
+[如何看待作家方方遭举报，被指疫情期间用特权送亲属出境？](https://www.zhihu.com/question/379065733/answer/1079204276)
 
 **黑法师学魔法，就是为了使用魔法，而白法师学魔法，是为了让黑法师的魔法对自己无效，并且为了避免自己利用魔法。**
 
