--- a/Anonymity/04 - 社科答集/为政以德.md
+++ b/Anonymity/04 - 社科答集/为政以德.md
@@ -35,4 +35,4 @@
 
 等到它已经触发时，早已无力回天了。
 
-[帝国主义的定义什么？587 赞同 · 83 评论回答](https://www.zhihu.com/question/19593017/answer/1399461143)
+[帝国主义的定义什么？](https://www.zhihu.com/question/19593017/answer/1399461143)
