--- a/Anonymity/04 - 社科答集/清白体育.md
+++ b/Anonymity/04 - 社科答集/清白体育.md
@@ -119,4 +119,4 @@
 
 人当然要有自信才行。但是“自信”到底应该是什么？
 
-[中华文明的自信来源于何处？1488 赞同 · 153 评论回答](https://www.zhihu.com/question/269905766/answer/510828072)
+[中华文明的自信来源于何处？](https://www.zhihu.com/question/269905766/answer/510828072)
