--- a/Anonymity/06 - 未来科技/5G.md
+++ b/Anonymity/06 - 未来科技/5G.md
@@ -260,7 +260,7 @@
 
 否则，看一下这个：
 
-[2020年，特朗普会连任吗?837 赞同 · 165 评论回答](https://www.zhihu.com/question/324842335/answer/694272869)
+[2020年，特朗普会连任吗?](https://www.zhihu.com/question/324842335/answer/694272869)
 
 ---
 
