--- a/Anonymity/13 - 百年未有之变局/一个坑.md
+++ b/Anonymity/13 - 百年未有之变局/一个坑.md
@@ -43,7 +43,7 @@ KGB出身；
 
 **普京有可能假设西方不会采取任何一种可能的反制吗？**
 
-[诉诸权威是逻辑谬误吗？172 赞同 · 27 评论回答](https://www.zhihu.com/question/64959012/answer/2409606638)
+[诉诸权威是逻辑谬误吗？](https://www.zhihu.com/question/64959012/answer/2409606638)
 
 **这看上去是在说普京、在说乌克兰，但实际上根本不是，这说的是你。**
 
