--- a/Anonymity/13 - 百年未有之变局/堆叠的轻信.md
+++ b/Anonymity/13 - 百年未有之变局/堆叠的轻信.md
@@ -11,7 +11,7 @@
 
 这是来自这个回答的“真相辟谣”。
 
-[乌克兰布查事件曝光后，马克龙表态支持对俄实施新制裁，将对国际局势带来哪些影响？2491 赞同 · 0 评论回答](https://www.zhihu.com/question/525989314/answer/2423914877)
+[乌克兰布查事件曝光后，马克龙表态支持对俄实施新制裁，将对国际局势带来哪些影响？](https://www.zhihu.com/question/525989314/answer/2423914877)
 
 考虑一下传播链——从多维新闻，到这位答主，到为这条辟谣点赞的这几百人。（略怀疑纽约时报是被这位作者误解了，先不点名，暂时懒得核实）
 
