--- a/Anonymity/13 - 百年未有之变局/大屠杀.md
+++ b/Anonymity/13 - 百年未有之变局/大屠杀.md
@@ -15,7 +15,7 @@
 
 事实上，更好的做法是“不把任何媒体可以视作“可信”的。事实的真相如何，只能从原始材料诉诸客观规律和理性逻辑去获得一个带最大的置信度的猜测范围”。
 
-[闾丘露薇是一个怎样的人？345 赞同 · 79 评论回答](https://www.zhihu.com/question/22020980/answer/798415609)
+[闾丘露薇是一个怎样的人？](https://www.zhihu.com/question/22020980/answer/798415609)
 
 所以，下面这是一个常识性的问题——
 
