--- a/Anonymity/13 - 百年未有之变局/黑名单.md
+++ b/Anonymity/13 - 百年未有之变局/黑名单.md
@@ -11,4 +11,4 @@
 
 打下乌克兰后，黑名单上的国家和地区市场会遭受沉重的信心危机，资本外逃，付出经济代价。
 
-[如何评价亚投行暂停并审查在俄罗斯与白俄罗斯的相关活动？747 赞同 · 120 评论回答](https://www.zhihu.com/question/519873338/answer/2374732045)
+[如何评价亚投行暂停并审查在俄罗斯与白俄罗斯的相关活动？](https://www.zhihu.com/question/519873338/answer/2374732045)
