--- a/Anonymity/01 - 家族答集/家庭政治.md
+++ b/Anonymity/01 - 家族答集/家庭政治.md
@@ -75,6 +75,6 @@ ta就会好很多。
 
 而绝望首先根本不是一个政治问题，而是一个心灵发育问题。
 
-[悲观的人如何能变得乐观？2806 赞同 · 1597 评论回答](https://www.zhihu.com/question/266034365/answer/557697304)
+[悲观的人如何能变得乐观？](https://www.zhihu.com/question/266034365/answer/557697304)
 
-[运气极差的人该如何从头开始恢复运气?2013 赞同 · 345 评论回答](https://www.zhihu.com/question/421719141/answer/1481010073)
+[运气极差的人该如何从头开始恢复运气?](https://www.zhihu.com/question/421719141/answer/1481010073)
