--- a/Anonymity/04 - 社科答集/中美贸易战.md
+++ b/Anonymity/04 - 社科答集/中美贸易战.md
@@ -11,7 +11,7 @@
 
 [0074 - 芯片前景 - 中国芯片产业前景到底怎么样？](app://obsidian.md/0074%20-%20%E8%8A%AF%E7%89%87%E5%89%8D%E6%99%AF%20-%20%E4%B8%AD%E5%9B%BD%E8%8A%AF%E7%89%87%E4%BA%A7%E4%B8%9A%E5%89%8D%E6%99%AF%E5%88%B0%E5%BA%95%E6%80%8E%E4%B9%88%E6%A0%B7%EF%BC%9F)
 
-[中国芯片产业前景到底怎么样？1808 赞同 · 399 评论回答](https://www.zhihu.com/question/305898679/answer/563613133)
+[中国芯片产业前景到底怎么样？](https://www.zhihu.com/question/305898679/answer/563613133)
 
 ---
 
