--- a/Anonymity/04 - 社科答集/刑罚之外.md
+++ b/Anonymity/04 - 社科答集/刑罚之外.md
@@ -58,6 +58,6 @@
 
 **能促使你在这方面采取行动，当事人也就没有白白的受这个罪，这其实已经是一种很大的救赎。**
 
-[如何看待南昌红谷滩实习女律师当街遇害一案？287 赞同 · 98 评论回答](https://www.zhihu.com/question/326341279/answer/697745521)
+[如何看待南昌红谷滩实习女律师当街遇害一案？](https://www.zhihu.com/question/326341279/answer/697745521)
 
-[如何评价电影《祈祷落幕时》？404 赞同 · 129 评论回答](https://www.zhihu.com/question/288403977/answer/658358536)
+[如何评价电影《祈祷落幕时》？](https://www.zhihu.com/question/288403977/answer/658358536)
