--- a/Anonymity/04 - 社科答集/历史的燃料.md
+++ b/Anonymity/04 - 社科答集/历史的燃料.md
@@ -69,4 +69,4 @@
 
 多想想清楚。
 
-[嫉妒的根源是什么？629 赞同 · 185 评论回答](https://www.zhihu.com/question/19733748/answer/729055660)
+[嫉妒的根源是什么？](https://www.zhihu.com/question/19733748/answer/729055660)
