--- a/Anonymity/13 - 百年未有之变局/釜底抽薪.md
+++ b/Anonymity/13 - 百年未有之变局/釜底抽薪.md
@@ -47,4 +47,4 @@ ta恨不得要把水管都敲断——这个世界上，只有成事不足，败
 
 看人类这次能不能明智一次吧。
 
-[乌克兰局势走向对中国有什么影响?362 赞同 · 12 评论回答](https://www.zhihu.com/question/22923120/answer/2365595645)
+[乌克兰局势走向对中国有什么影响?](https://www.zhihu.com/question/22923120/answer/2365595645)
