--- a/Anonymity/13 - 百年未有之变局/面向第三世界.md
+++ b/Anonymity/13 - 百年未有之变局/面向第三世界.md
@@ -67,7 +67,7 @@ and good luck.
 
 [中国芯片产业前景到底怎么样？](https://www.zhihu.com/question/305898679/answer/563613133)
 
-[大过滤器（一）好胃口398 赞同 · 80 评论文章](https://zhuanlan.zhihu.com/p/70432854)
+[大过滤器（一）好胃口](https://zhuanlan.zhihu.com/p/70432854)
 
 [未来十年哪些基础科学突破会影响互联网科技产业？产业互联网和消费互联网融合创新，会带来哪些改变？](https://www.zhihu.com/question/299741613/answer/518084024)
 
