--- a/Anonymity/13 - 百年未有之变局/不赞同.md
+++ b/Anonymity/13 - 百年未有之变局/不赞同.md
@@ -11,7 +11,7 @@
 
 而且有点惊讶他对资料的漫不经心和结论的轻率。
 
-[目前对俄乌问题最理性最有见解的论述:人大教授翟东升对俄乌问题的8点思考，中国人一定要有定力14 赞同 · 0 评论文章](https://zhuanlan.zhihu.com/p/477717604)
+[目前对俄乌问题最理性最有见解的论述:人大教授翟东升对俄乌问题的8点思考，中国人一定要有定力](https://zhuanlan.zhihu.com/p/477717604)
 
 > 首先，他最初心目中所设想的是一场速战速决的“特别军事行动”，（据说速胜宣传稿都准备好了，甚至还被误发出来了）而不是一场生命和政治赌注巨大的旷日持久之战。他以为这次对乌克兰的闪电战，会跟此前的历次行动一样，摧枯拉朽，热刀切黄油，塑造和巩固他的战斗领袖的光辉形象。有人分析，这种误判跟他的信息通道狭窄有关，俄罗斯的高官们似乎都不太敢向他讲真话了，都在比着讲好听的话，或者顺着他的意思说，从而对他形成了误导。
 
