--- a/沙海拾金/一带一路.md
+++ b/沙海拾金/一带一路.md
@@ -29,3 +29,7 @@ ta们回答不了这样一个问题——中国是不是打算独自去面对整
 这远远的比军力、科技能力、经济规模本身更触动前殖民国家的神经国际秩序最大的滑移，根本不发生在南海或者台海，而是正在非洲发生。
 
 那才是美国能号召起"盟友"一起睁着眼睛说谎的真正原因。
+
+---
+
+真正的根，是思想问题和文化问题。 不解决思想和文化问题，一带一路将会面临很大的波折。不是其他国家不想合作、也不是欧美可以成功阻挠，而是国内自己的思想局限、民意纠葛会制造最大的麻烦。 中国自己的思想和文化在多大程度上能支撑而不是掣肘一带一路、人类命运共同体的意识形态，是一个比五眼国家更深刻、更根本的问题。 甚至可以说与之相比，五眼国家的这些滋扰只是一个伪问题。
