update link format

--- a/Anonymity/00 - 致读者/致你们.md
+++ b/Anonymity/00 - 致读者/致你们.md
@@ -1,4 +1,4 @@
- # 致你们
+# 致你们
 [致你们](https://zhuanlan.zhihu.com/p/498759256)
 
 > Author: #Anonymity
@@ -67,16 +67,16 @@ ta们并非有意要伤害你们，但你们很可能会因此受到伤害而想
 
 不用移山倒海，只需要你们做一点点不为零的净帮助。
 
-[最近有人开始囤粮食了，有必要吗？2473 赞同 · 246 评论回答](https://www.zhihu.com/question/384055561/answer/2439164062)
+[最近有人开始囤粮食了，有必要吗？](https://www.zhihu.com/question/384055561/answer/2439164062)
 
-[为什么大家对网上的求助信息都无动于衷呢？303 赞同 · 20 评论回答](https://www.zhihu.com/question/20336355/answer/1027292248)
+[为什么大家对网上的求助信息都无动于衷呢？](https://www.zhihu.com/question/20336355/answer/1027292248)
 
-[在新冠疫情之下，组织小区蔬菜采购的最佳实践是什么？325 赞同 · 62 评论回答![](https://pic1.zhimg.com/v2-76f9433f0d750085a9b681781388a1d8_720w.jpg)](https://www.zhihu.com/question/372303623/answer/1019553788)
+[在新冠疫情之下，组织小区蔬菜采购的最佳实践是什么？](https://www.zhihu.com/question/372303623/answer/1019553788)
 
-[疫情期间如何救助滞留宠物？79 赞同 · 11 评论回答](https://www.zhihu.com/question/372726366/answer/1022805414)
+[疫情期间如何救助滞留宠物？](https://www.zhihu.com/question/372726366/answer/1022805414)
 
-[我要怎样做才可以让一线的医生护士不这么辛苦?142 赞同 · 10 评论回答](https://www.zhihu.com/question/373400991/answer/1047124128)
+[我要怎样做才可以让一线的医生护士不这么辛苦?](https://www.zhihu.com/question/373400991/answer/1047124128)
 
-[如何看待肺炎期间一些租客要求房东免租的行为?103 赞同 · 27 评论回答![](https://pic1.zhimg.com/v2-975ac2f2a5a53e3acfbdfc736cfc3e58_120x160.jpg)](https://www.zhihu.com/question/368387656/answer/998992372)
+[如何看待肺炎期间一些租客要求房东免租的行为?](https://www.zhihu.com/question/368387656/answer/998992372)
 
-[面对疫情，你见到了哪些现实版的「平凡人给我最多感动」？111 赞同 · 8 评论回答![](https://pic2.zhimg.com/v2-b3dbe115bd9fd464f1bd7201a424de79_120x160.jpg)](https://www.zhihu.com/question/371138161/answer/1012240980)
+[面对疫情，你见到了哪些现实版的「平凡人给我最多感动」？](https://www.zhihu.com/question/371138161/answer/1012240980)
