--- a/Anonymity/13 - 百年未有之变局/北溪2.md
+++ b/Anonymity/13 - 百年未有之变局/北溪2.md
@@ -33,4 +33,4 @@
 
 说实在的，小孩子不适合谈论政治。
 
-[如果默克尔还在任，面对今日（2022年3月4日）的俄罗斯乌克兰局势，会有怎样的应对？1400 赞同 · 215 评论回答](https://www.zhihu.com/question/519949392/answer/2448395939)
+[如果默克尔还在任，面对今日（2022年3月4日）的俄罗斯乌克兰局势，会有怎样的应对？](https://www.zhihu.com/question/519949392/answer/2448395939)
