--- a/Anonymity/03 - 第一性/爱语.md
+++ b/Anonymity/03 - 第一性/爱语.md
@@ -1,10 +1,10 @@
-# 隐晦示爱
+# 爱语
 *有没有可以隐晦表示我爱你的句子?*
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[成熟]] [[情绪]] [[恋爱原理]] [[可爱 - Loveable]]
-> Tag:
+> Tag: #两性 #Caritas
 > 沙海拾金:
 
 这怪我。
