--- a/Anonymity/13 - 百年未有之变局/打得是谁.md
+++ b/Anonymity/13 - 百年未有之变局/打得是谁.md
@@ -11,23 +11,23 @@
 
 因为俄罗斯不是在打乌克兰。
 
-**俄罗斯是在打整个对他国主权故意低估的西方集团统治体系，只是拳头直奔空门，正落在攻击距离最短，而防护最薄弱的[酒精肝](https://www.zhihu.com/search?q=%E9%85%92%E7%B2%BE%E8%82%9D&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2415612769%7D)上。**
+**俄罗斯是在打整个对他国主权刻意故意低估的西方集团统治体系，只是拳头直奔空门，正落在攻击距离最短，而防护最薄弱的酒精肝上。**
 
 有人对着你的鼻子就是一拳，你大概不会指责他——“你为什么要打我的鼻子”。
 
-什么叫“低估他国主权”？简单来说，就是自忖对方不敢翻脸、拿“翻脸的代价很大”来要挟所有体系外的主权国家，**迫使他们开放出售自己的资源和市场通行权，从而导致它们互相过度竞争，形成强烈的被动局面**。
+什么叫“刻意低估他国主权”？简单来说，就是自忖对方不敢翻脸、拿“翻脸的代价很大”来要挟所有体系外的主权国家，**迫使他们开放出售自己的资源和市场通行权，从而导致它们互相过度竞争，形成强烈的被动局面**。
 
 举个例子——所有有石油的国家都要卖石油，不准不卖，不卖的话不是颜色革命就是挨制裁、挨入侵。
 
 所有人都卖，于是买家就可以在所有卖家之间腾挪掉配，客大欺店。
 
-**实际上资源不该这么廉价，而“[知识产权](https://www.zhihu.com/search?q=%E7%9F%A5%E8%AF%86%E4%BA%A7%E6%9D%83&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2415612769%7D)”不该如此高贵。**
+**实际上资源不该这么廉价，而“知识产权”不该如此高贵。**
 
 **是因为掌握资源、市场的卖家们被恐惧、谎言，剥夺了关闭国门、中断供应的自由，无限量的“充分供应”，才导致了自身的困窘。**
 
-## 一切价值必须重估。
+一切价值必须重估。
 
-这才是俄罗斯开展的理由。
+这才是俄罗斯开战的理由。
 
 世界上最贵的不是知识。
 
