--- a/Anonymity/07 - 军事技术与艺术/中段反导.md
+++ b/Anonymity/07 - 军事技术与艺术/中段反导.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *25/06/2022*
-> Link: [[Anonymity/07 - 军事技术与艺术/战略轰炸机]] [[核伊朗]] [[舰炮]] [[中国的规模]]
+> Link: [[战略轰炸机1]] [[核伊朗]] [[舰炮]] [[中国的规模]]
 > Tag:
 > 沙海拾金:
 
