--- a/Anonymity/13 - 百年未有之变局/三赢.md
+++ b/Anonymity/13 - 百年未有之变局/三赢.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *14/10/2022*
-> Link: [[以退为进]] [[快开慢走]] [[俄乌战争]] [[克里米亚大桥]] [[三幕剧]]
+> Link: [[以退为进]] [[快开慢走]] [[俄乌战争]] [[桥]] [[三幕剧]]
 > Tag: #时政 #军事
 > 沙海拾金:
 
