--- a/Anonymity/13 - 百年未有之变局/战略轰炸机.md
+++ b/Anonymity/13 - 百年未有之变局/战略轰炸机.md
@@ -4,7 +4,7 @@
 > Author: #Anonymity
 > Last update: *17/06/2022*
 > Link:
-> Tag:
+> Tag: #军事
 > 沙海拾金:
 
 中国周边能维护和起飞B2/B21轰炸机的机场并不多，可以说寥寥无几。
@@ -13,7 +13,7 @@
 
 这些机场会被各种卫星、长航时侦察机、甚至是潜航侦察器、隐身侦察机盯得死死的。
 
-[战略轰炸机](https://www.zhihu.com/search?q=%E6%88%98%E7%95%A5%E8%BD%B0%E7%82%B8%E6%9C%BA&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2527614867%7D)翼展50米左右，航母的宽度才80米，看得一清二楚。
+战略轰炸机翼展50米左右，航母的宽度才80米，看得一清二楚。
 
 并且以太平洋作为图像背景是非常单纯的，人工智能从图像中识别抓取B2机体这么典型的图元快如闪电。
 
