--- a/Anonymity/09 - 神学答集/神学的课题.md
+++ b/Anonymity/09 - 神学答集/神学的课题.md
@@ -1,10 +1,10 @@
 # 神学的课题
-*现代神学研究什么？*
+*[现代神学研究什么？](https://www.zhihu.com/question/23971660/answer/1816581501)*
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link:
-> Tag:
+> Tag: #神学
 > 沙海拾金:
 
 这个问题其实目前没有太大的意义。
