--- a/Anonymity/01 - 家族答集/有钱人.md
+++ b/Anonymity/01 - 家族答集/有钱人.md
@@ -49,9 +49,9 @@
 
 人啊，在很多问题上缺少听力。
 
-已经明确的说明了**“追求物质”本身是达成“得到物质”这个目的最没效率的途径**，还非要像别人耽误了自己的事业那样顶风上。
+已经明确的说明了 **“追求物质”本身是达成“得到物质”这个目的最没效率的途径**，还非要像别人耽误了自己的事业那样顶风上。
 
-**恨贫好富的，是最不容易富的——**这话说了一遍又一遍，眼光却非要盯在“不许我们羡慕富人就是不知民间疾苦”上。
+**恨贫好富的，是最不容易富的**——这话说了一遍又一遍，眼光却非要盯在“不许我们羡慕富人就是不知民间疾苦”上。
 
 这到底是真的想要富有起来，还是只是想过过嘴瘾？
 
