--- a/Anonymity/04 - 社科答集/贵派.md
+++ b/Anonymity/04 - 社科答集/贵派.md
@@ -1,5 +1,5 @@
 # 贵派
-[希特勒是左派还是右派？](https://www.zhihu.com/question/41941585/answer/528543045)*
+[希特勒是左派还是右派？](https://www.zhihu.com/question/41941585/answer/528543045)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
