--- a/Anonymity/06 - 未来科技/逼你幸福.md
+++ b/Anonymity/06 - 未来科技/逼你幸福.md
@@ -33,7 +33,7 @@
 
 人的精力是有限的，而创造之中所包含的无限的繁琐是最大的门槛。这些东西可以被削减和压缩，永远是一件好事。
 
-只要你是一个**创作者，**ai对你就只有好消息，没有坏消息。
+只要你是一个**创作者**，ai对你就只有好消息，没有坏消息。
 
 这所谓的创作者包含两个方向——内容创作者和形式创作者。
 
