--- a/Anonymity/08 - 文艺答集/历史与小板凳.md
+++ b/Anonymity/08 - 文艺答集/历史与小板凳.md
@@ -27,13 +27,13 @@
 
 只有对同一个问题，历史经验才有足够的参考意义，才有谈论“如果不这么做会更好/更糟”的意义。
 
-**如果根本不是同一个问题，那么对先在问题的总结对后发问题就没有断言性的指导意义。**比如上一个女朋友因为你没赞成某事和你分手，并不意味着这个女朋友会因为你转而赞成某事就不会与你分手。
+**如果根本不是同一个问题，那么对先在问题的总结对后发问题就没有断言性的指导意义**。比如上一个女朋友因为你没赞成某事和你分手，并不意味着这个女朋友会因为你转而赞成某事就不会与你分手。
 
 相对的，像战争这类一生也发生不了几次的大周期的历史事件从根本逻辑上就是无法以断言语气讨论“如果xx就不会xx”的。
 
 即使经过某种程序形成了对这类事件的某种不容挑战的共识，那也仍然只不过是**政治正确**，表达的只是一种**坚决的赌注，**一种**强烈的主观期盼。**
 
-**换言之，只是表达了一种政治的、愿望的立场，而非科学的、学术的结论。**只是表达了“我希望/宁肯相信他错了”，而不是“可以证明ta是错的”。
+**换言之，只是表达了一种政治的、愿望的立场，而非科学的、学术的结论**。只是表达了“我希望/宁肯相信他错了”，而不是“可以证明ta是错的”。
 
 你什么也没证明，只是在表达自己的希望。
 
