--- a/Anonymity/01 - 家族答集/数学功底.md
+++ b/Anonymity/01 - 家族答集/数学功底.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[艺术本质]] [[雅俗共赏]] [[学哲学 1]] [[不可证伪]]
+> Link: [[艺术本质]] [[雅俗共赏]] [[全科学习]] [[不可证伪]]
 > Tag: #功夫
 > 沙海拾金:
 
