--- a/Anonymity/04 - 社科答集/发达中国.md
+++ b/Anonymity/04 - 社科答集/发达中国.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *15/05/2022*
-> Link: [[中国基建]] [[中国的规模]] [[中国人的全球化]] [[创新中国]] [[王天下]]
+> Link: [[中国基建]] [[中国的规模]] [[中国人的全球化]] [[创新问题1]] [[王天下]]
 > Tag:
 > 沙海拾金:
 
