--- a/Anonymity/09 - 神学答集/安息日.md
+++ b/Anonymity/09 - 神学答集/安息日.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *21/03/2015*
-> Link: [[学哲学 1]] [[学习的快乐]] [[圣经Bible]]
+> Link: [[全科学习]] [[学习的快乐]] [[圣经Bible]]
 > Tag: #杂论
 > 沙海拾金:
 
