--- a/Anonymity/13 - 百年未有之变局/1170.md
+++ b/Anonymity/13 - 百年未有之变局/1170.md
@@ -73,7 +73,7 @@
 
 一百年不服，**五百年也不服，**
 
-## **一千年也不服。**
+**一千年也不服。**
 
 到现在，
 
@@ -93,7 +93,7 @@
 
 **tmd**
 
-## **1170年**。
+**1170年**。
 
 1450们，翻译翻译，
 
@@ -107,7 +107,7 @@
 
 **1170**，
 
-## **Slava Rus.**
+**Slava Rus.**
 
 翻译翻译。
 
