--- a/Anonymity/01 - 家族答集/世面.md
+++ b/Anonymity/01 - 家族答集/世面.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *11/09/2021*
-> Link: [[穷开心]] [[励志]] [[循环买卖]] [[出手]] [[学与玩]] [[世界史]] [[粗心]] [[能力]] [[高中书目]] [[提升格局]] [[精神资本家]] [[学哲学 1]] [[学哲学]] [[女性学哲学]] [[家族]]
+> Link: [[穷开心]] [[励志]] [[循环买卖]] [[出手]] [[学与玩]] [[世界史]] [[粗心]] [[能力]] [[高中书目]] [[提升格局]] [[精神资本家]] [[全科学习]] [[学哲学]] [[女性学哲学]] [[家族]]
 > Tag:
 > 沙海拾金:
 
