--- a/Anonymity/01 - 家族答集/免于极端.md
+++ b/Anonymity/01 - 家族答集/免于极端.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[自私]] [[伟大的自私]] [[学哲学 1]] [[财富观]] [[祷告观]] [[孰强孰弱]] [[烦躁]] [[FURY]] [[理想]] [[过渡性价值观]]
+> Link: [[自私]] [[伟大的自私]] [[全科学习]] [[财富观]] [[祷告观]] [[孰强孰弱]] [[烦躁]] [[FURY]] [[理想]] [[过渡性价值观]]
 > Tag:
 > 沙海拾金:
 
