--- a/Anonymity/01 - 家族答集/能力.md
+++ b/Anonymity/01 - 家族答集/能力.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[学习的快乐]] [[学好语文]] [[爱]] [[文科生]] [[学哲学 1]] [[家族]] [[学会]] [[世界史]] [[精英]]
+> Link: [[学习的快乐]] [[学好语文]] [[爱]] [[文科生]] [[全科学习]] [[家族]] [[学会]] [[世界史]] [[精英]]
 > Tag: #家族 #功夫
 > 沙海拾金:[[核心能力 - 房屋布局表述]]
 
