--- a/Anonymity/01 - 家族答集/自我怀疑.md
+++ b/Anonymity/01 - 家族答集/自我怀疑.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[上策]] [[前途]] [[服从]] [[反刍痛苦]] [[极度聪明]] [[理解的原理]] [[耽误了五六年]] [[胆小莫入]] [[观点坚定]] [[免于极端]] [[极端不忠诚]] [[可信标准]] [[史料不可信]] [[自信]] [[自洽]] [[烦躁]] [[自强]] [[开悟]] [[傲慢]] [[傲慢之路]] [[世界史]] [[对人类失望]] [[永远忐忑]] [[祷告观]] [[错得对]] [[学哲学 1]] [[学哲学]] [[女性学哲学]] [[艺术废人]]
+> Link: [[上策]] [[前途]] [[服从]] [[反刍痛苦]] [[极度聪明]] [[理解的原理]] [[耽误了五六年]] [[胆小莫入]] [[观点坚定]] [[免于极端]] [[极端不忠诚]] [[可信标准]] [[史料不可信]] [[自信]] [[自洽]] [[烦躁]] [[自强]] [[开悟]] [[傲慢]] [[傲慢之路]] [[世界史]] [[对人类失望]] [[永远忐忑]] [[祷告观]] [[错得对]] [[全科学习]] [[学哲学]] [[女性学哲学]] [[艺术废人]]
 > Tag:
 > 沙海拾金:[[保持怀疑.png]]
 
