--- a/Anonymity/01 - 家族答集/自由意志.md
+++ b/Anonymity/01 - 家族答集/自由意志.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[学哲学 1]] [[对人类失望]] [[意识上传]] [[操纵]] [[中国宗教的问题]] [[能力]] [[世界史]]
+> Link: [[全科学习]] [[对人类失望]] [[意识上传]] [[操纵]] [[中国宗教的问题]] [[能力]] [[世界史]]
 > Tag:
 > 沙海拾金:[[沙海拾金/评论区/自由意志]]
 
