--- a/Anonymity/01 - 家族答集/钻牛角尖.md
+++ b/Anonymity/01 - 家族答集/钻牛角尖.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *18/09/2021*
-> Link: [[接受现实]] [[我是对的]] [[权利的总和]] [[普世价值]] [[道法自然]] [[自然法]] [[高中书目]] [[三观可塑期]] [[致读者 - III]] [[喜欢哲学]] [[学哲学 1]] [[悟性 1]] [[尊师]] [[检验信仰的客观标准]] [[何为客观]] [[世界史]] [[祷告观]]
+> Link: [[接受现实]] [[我是对的]] [[权利的总和]] [[普世价值]] [[道法自然]] [[自然法]] [[高中书目]] [[三观可塑期]] [[致读者 - III]] [[喜欢哲学]] [[全科学习]] [[悟性 1]] [[尊师]] [[检验信仰的客观标准]] [[何为客观]] [[世界史]] [[祷告观]]
 > Tag:
 > 沙海拾金:
 
