--- a/Anonymity/01 - 家族答集/阅历.md
+++ b/Anonymity/01 - 家族答集/阅历.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *14/08/2021*
-> Link: [[能力]] [[学会]] [[世界史]] [[学哲学 1]] [[奢侈品 1]] [[世界史]] [[学习的快乐]] [[城府]]
+> Link: [[能力]] [[学会]] [[世界史]] [[全科学习]] [[奢侈品 1]] [[世界史]] [[学习的快乐]] [[城府]]
 > Tag:
 > 沙海拾金:
 
