--- a/Anonymity/02 - 企管答集/想好再干.md
+++ b/Anonymity/02 - 企管答集/想好再干.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *07/08/2021*
-> Link: [[埋头苦干]] [[人走茶凉]] [[农村出身]] [[敌人]] [[辞职]] [[领导力特征]] [[手撕领导]] [[培养下属]] [[培养]] [[培养下属]] [[防止失业]] [[批评]]
+> Link: [[埋头苦干]] [[人走茶凉]] [[农村出身]] [[敌人]] [[母港]] [[领导力特征]] [[手撕领导]] [[培养下属]] [[培养]] [[培养下属]] [[防止失业]] [[批评]]
 > Tag:
 > 沙海拾金:
 
