--- a/Anonymity/08 - 文艺答集/哲学家.md
+++ b/Anonymity/08 - 文艺答集/哲学家.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[学哲学 1]] [[学哲学]] [[女性学哲学]]
+> Link: [[全科学习]] [[学哲学]] [[女性学哲学]]
 > Tag:
 > 沙海拾金:
 
