--- a/Anonymity/08 - 文艺答集/好书.md
+++ b/Anonymity/08 - 文艺答集/好书.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link: [[学哲学 1]] [[高中书目]] [[藏书]]
+> Link: [[全科学习]] [[高中书目]] [[藏书]]
 > Tag: #其它/一些推荐 #处事
 > 沙海拾金:
 
