--- a/Anonymity/09 - 神学答集/希腊哲学.md
+++ b/Anonymity/09 - 神学答集/希腊哲学.md
@@ -3,7 +3,7 @@
 
 > Author: #Anonymity
 > Last update: *26/07/2021*
-> Link: [[哲学家]] [[中西哲学]] [[爱与神哲学]] [[学哲学 1]] [[学哲学]] [[女性学哲学]]
+> Link: [[哲学家]] [[中西哲学]] [[爱与神哲学]] [[全科学习]] [[学哲学]] [[女性学哲学]]
 > Tag: #神学
 > 沙海拾金:
 
