--- a/【本周更新】/全科学习.md
+++ b/【本周更新】/全科学习.md
@@ -1,10 +1,10 @@
-# 学哲学
+# 全科学习
 [哲学如此抽象，大家都是怎么学习的？](https://www.zhihu.com/question/304130360/answer/550517189)
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
 > Link: [[学哲学]] [[女性学哲学]] [[世界史]]
-> Tag:
+> Tag: #功夫
 > 沙海拾金:
 
 文法理工农医艺，都读到本科水平，构建一个相对完整的常识。——这差不多意味着两亿字左右的阅读量（杂志微博聊天记录这些不算）。
