--- a/【本周更新】/母港.md
+++ b/【本周更新】/母港.md
@@ -1,10 +1,10 @@
-# 辞职
+# 母港
 *员工辞职需要为现公司考虑吗?*
 
 > Author: #Anonymity
 > Last update: *23/07/2021*
-> Link:
-> Tag: #职业
+> Link: 
+> Tag: #职业 #企管
 > 沙海拾金:
 
 从个人职业生涯的角度，可以说“好企业”只有一条最好用的鉴定标准——**走了的员工不介意再回来，而企业也乐于再录用。**
