--- a/Anonymity/13 - 百年未有之变局/1比0.md
+++ b/Anonymity/13 - 百年未有之变局/1比0.md
@@ -13,7 +13,7 @@
 
 中国如果没有基于最坏的估计做好充分的准备，是不会轻易制造自己无法控制的局面的。
 
-换言之，这事最坏的局面就是中美断交、开战、立刻启动两岸统一进程，我们已经做好了以[佩洛西事件](https://www.zhihu.com/search?q=%E4%BD%A9%E6%B4%9B%E8%A5%BF%E4%BA%8B%E4%BB%B6&search_source=Entity&hybrid_search_source=Entity&hybrid_search_extra=%7B%22sourceType%22%3A%22answer%22%2C%22sourceId%22%3A2596192416%7D)为导火索启动整个动作的准备。
+换言之，这事最坏的局面就是中美断交、开战、立刻启动两岸统一进程，我们已经做好了以佩洛西事件为导火索启动整个动作的准备。
 
 而且这个准备不是那种“可以成功偷袭珍珠港”式的没有后手短期准备，而是“由此摊牌，打到一切敌人全部求和为止的准备”。
 
